// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`saju generator regression snapshots > keeps the focused business partner compatibility narrative stable 1`] = `
{
  "actions": [
    "권한, 수익 배분, 철수 기준을 한 문장씩 적어 초안 만들기",
    "이번 주 소비/시간 로그를 7일만 기록해 반복 패턴을 확인하기",
    "중요한 대화 1건은 사실-느낌-요청 순서로 짧게 정리해 전달하기",
  ],
  "attractionPoint": "서로에게 없는 장점을 보완해 줄 수 있다는 점이 가장 큰 강점입니다. 혼자 했다면 오래 걸릴 일을 둘이 하면 빨라지는 조합이라면, 이 궁합은 실제 일에서 체감 가치가 큽니다.",
  "caution": "MBTI로 보면 User은 정답을 빨리 찾으려다 마음의 온도를 놓칠 수 있는 점, Partner은 정답을 빨리 찾으려다 마음의 온도를 놓칠 수 있는 점. 합이 좋다는 믿음이 클수록 돈과 철수 기준을 뒤로 미뤄 나중에 더 크게 흔들릴 수 있습니다. 동업 궁합은 신뢰감이 클수록 돈과 철수 기준을 뒤로 미루기 쉽습니다. 서로 잘 맞는다는 확신이 클수록 가장 민감한 돈과 권한 문장을 더 늦추기 쉽습니다. 감정이 뜨거울수록 말의 세기도 세질 수 있어, 감정이 오른 날은 결론을 미루는 편이 안전합니다. 성격 문제로 받아들이기보다 일 방식 차이로 먼저 읽으면 피로를 크게 줄일 수 있습니다.

특히 토 기운이 지나치게 앞서면 판단이 잠깐 급해질 수 있습니다. 완벽하게 하려는 마음이 클수록 시작 단위를 더 작게 잡으면 훨씬 유리합니다. 월지 축은 양에 놓여 있어, 보호와 보살핌 속에서 힘을 기르는 상태. 큰 수정보다 작은 정리 하나만 해도 흐름의 거친 면은 한결 부드러워집니다. 생각이 정리될 때까지 기다리다 타이밍을 놓치지 않도록 작은 행동부터 시작하세요.",
  "communicationTip": "좋은 합일수록 중요한 건 말보다 문장입니다. 돈, 역할, 철수 기준을 먼저 적어 두면 관계와 일 둘 다 더 오래 갑니다. 편한 사이일수록 계약서에 가까운 기준 문장을 남기는 편이 안전합니다.",
  "conflictTrigger": "좋은 합이라도 돈, 역할, 철수 기준이 흐려지면 신뢰보다 억울함이 먼저 쌓일 수 있습니다. 특히 매출이 붙기 시작할 때 공과 사 경계가 흐려지면 관계가 급격히 거칠어질 수 있습니다.",
  "coreSignal": "이번 사업 파트너 궁합에서 핵심은 '관계-성과' 리듬이 실제 관계 기준으로 이어질 수 있는지 읽는 일입니다. 이 리듬은 친밀감보다 역할과 책임 경계가 실제 문장으로 세워질 수 있는지를 보여 줍니다. 지금은 아이디어보다 권한과 손실 기준을 먼저 맞추는 편이 맞습니다.

무토인 User과 경금인 Partner의 동업운은 User의 토 기운과 Partner의 토 기운이 역할 나눔으로 이어질 때 강합니다. 토 일간이 금 일간을 생하는 상생 관계라, 한쪽이 흐름을 열면 다른 쪽이 자연스럽게 반응하는 편입니다. 다만 금·화 축에서는 판단 기준이 흐려지기 쉬워, 초반 기준을 먼저 맞춰 두는 편이 좋습니다.",
  "currentDaewoon": "User: 현재 대운은 33~42세 구간의 신유 대운입니다. 신유의 흐름이라 금 기운이 짙어 기준감이 또렷해지는 흐름입니다. Partner: 현재 대운은 33~42세 구간의 정묘 대운입니다. 정묘의 흐름이라 화의 표현력과 목의 성장력이 함께 움직이는 흐름입니다.",
  "narrativeFlow": "MBTI로 보면 User은 큰 흐름을 먼저 보고 움직일 때 리듬이 더 잘 살아납니다, Partner은 큰 흐름을 먼저 보고 움직일 때 리듬이 더 잘 살아납니다. 좋은 동업 궁합도 말보다 문장이 늦으면 쉽게 흔들리므로, 역할과 책임이 실제로 나눠질 수 있는지를 먼저 읽는 편이 맞습니다. 좋은 동업은 친한 사이보다 역할과 책임을 분명히 나누는 관계입니다. 이번 궁합은 친한지보다, 책임과 권한을 나눴을 때 서로의 강점이 실제 성과로 연결되는지를 중심으로 봅니다. User - Partner는 차이를 지우는 관계가 아니라, 역할을 잘 나눌 때 더 편안하고 단단해지는 관계입니다.

지금은 강하게 끌리고 또 강하게 배우게 되는 타입 서로를 바꾸려 하기보다 각자 잘하는 역할을 인정하면 관계의 매력이 훨씬 커집니다. 잘 맞는 날의 힘을 생활 규칙으로 옮겨 놓으면 뜨거움이 오래 갑니다. 서로의 성향 차이를 억지로 줄이기보다 각자의 리듬을 인정할수록 궁합이 훨씬 부드럽게 이어집니다.",
  "overview": "사업 파트너 궁합은 성격보다 권한, 수익 배분, 철수 기준이 얼마나 문장으로 남을 수 있는지를 먼저 봐야 합니다. 두 사람의 궁합은 '바람이 잦아든 뒤 돛이 다시 모양을 잡는 장면'처럼 호흡이 맞을 때 훨씬 편안하게 이어집니다. 이번 궁합은 친한지보다, 책임과 권한을 나눴을 때 서로의 강점이 실제 성과로 연결되는지를 중심으로 봅니다. 무토인 User과 경금인 Partner의 동업운은 User의 토 기운과 Partner의 토 기운이 역할 나눔으로 이어질 때 강합니다. 토 일간이 금 일간을 생하는 상생 관계라, 한쪽이 흐름을 열면 다른 쪽이 자연스럽게 반응하는 편입니다. 다만 금·화 축에서는 판단 기준이 흐려지기 쉬워, 초반 기준을 먼저 맞춰 두는 편이 좋습니다.

지금 두 사람은 강하게 끌리고 또 강하게 배우게 되는 타입. 강하게 끌리는 만큼 서로에게 배우게 되는 힘도 큰 관계입니다. 서로를 바꾸려 하기보다 각자 강한 부분을 살리고 약한 부분을 보완할 때 관계의 장점이 더 크게 드러납니다.",
  "pairDynamic": "이 관계는 친밀감보다 역할 분담이 선명할 때 가장 강합니다. 한쪽이 열고 한쪽이 다지는 흐름이 맞으면 성과가 빨리 붙지만, 서로 다 잘하려 들면 오히려 책임 경계가 흐려질 수 있습니다.",
  "reflectionQuestion": "우리가 함께 키우고 싶은 사업보다 먼저 정리해야 할 책임 경계는 무엇인가요? 지금의 선택이 긴 흐름과도 맞는지 함께 돌아보면 좋습니다.",
  "relationshipFlow": "MBTI로 보면 관계에서는 User은 기준을 말할 때 이유와 마음을 한 문장 더 붙이면 관계의 마찰이 줄어듭니다, Partner은 기준을 말할 때 이유와 마음을 한 문장 더 붙이면 관계의 마찰이 줄어듭니다. 관계 쪽에서는 신뢰의 크기보다 책임 경계가 분명한지가 훨씬 오래 가는 안정감을 만듭니다. 관계 궁합은 좋아 보이는 장면보다 말의 순서와 거리감이 실제로 편안한지에서 더 정확하게 읽힙니다. 관계를 보면 User의 토 기운과 Partner의 토 기운이 만날 때 시너지가 분명합니다. 지금 두 사람은 강하게 끌리고 또 강하게 배우게 되는 타입. 서로를 바꾸려 하기보다 각자 잘하는 역할을 인정하면 관계의 매력이 훨씬 커집니다.

다만 금·화 축에서는 오해가 잠깐 붙기 쉽습니다. 좋은 마음을 확인하는 말 한마디와 기대치 정렬이 함께 갈 때 궁합의 장점이 더 선명해집니다.",
  "sajuBasis": "위 분석표를 먼저 보면 두 사람의 사주 바탕이 한눈에 들어옵니다. User은 무토 일간이고, Partner은 경금 일간입니다.

User은 쉽게 흔들리지 않고 버티는 힘이 좋다는 뜻입니다 Partner은 쉽게 흔들리지 않고 버티는 힘이 좋다는 뜻입니다. 궁합은 이렇게 다른 타고난 결이 지금 들어온 운과 만나며 어떤 분위기를 만드는지 함께 읽어야 정확해집니다.",
  "sajuEvidence": [
    "User은 토 기운이 강해 쉽게 흔들리지 않고 버티는 힘이 좋다는 뜻입니다. Partner는 토 기운이 강해 쉽게 흔들리지 않고 버티는 힘이 좋다는 뜻입니다.",
    "User은 금 축에서 정리와 결단이 필요한 순간에는 한 번 더 망설이기 쉽습니다. Partner는 마음을 바로 드러내거나 분위기를 빠르게 띄우는 일에는 에너지가 더 들 수 있습니다.",
    "이번 질문에서는 같이 벌 수 있느냐만이 아니라, 같이 책임질 구조를 만들 수 있는지를 함께 읽어야 합니다.",
    "User 쪽은 월지 축은 양에 놓여 있어, 보호와 보살핌 속에서 힘을 기르는 상태. Partner 쪽은 월지 해는 병에 놓여 있어, 부담이 쌓이면 쉽게 지치므로 무리하면 손해가 나는 상태. 그래서 두 사람 모두 서두르기보다 각자 편한 리듬을 먼저 맞출수록 관계의 장점이 더 잘 살아납니다.",
  ],
  "storyTitle": "User - Partner의 사업 파트너 궁합 풀이",
  "subjectArchetypes": {
    "compatibility": {
      "code": "tension_growth",
      "description": "강하게 끌리고 또 강하게 배우게 되는 타입",
      "label": "긴장성장형",
    },
    "user": undefined,
  },
  "subjectLens": "User와 Partner의 궁합은 친분보다 역할 분담과 결정 기준이 맞을 때 훨씬 강해집니다. 토 기운은 성과를 밀어 주지만, 금 축은 권한과 돈의 경계가 흐려질 때 부담이 커지기 쉬우니 초반 문장 합의가 중요합니다. 사업 파트너 궁합은 누가 더 유능한지보다, 누가 앞서고 누가 다질 때 성과와 신뢰가 함께 남는지를 보는 질문입니다. 동업 궁합은 성격 합보다 돈, 역할, 의사결정 권한을 어떻게 나누는지가 훨씬 중요합니다.",
  "summary": "사업 파트너: 이번 궁합은 친분보다, 같이 벌고 같이 책임질 때 역할과 돈의 경계가 얼마나 선명해질 수 있는지를 읽는 데 초점을 둡니다. 신뢰보다 돈과 철수 기준을 미리 나눌수록 오래 갑니다.",
  "tenYearFlow": "User: 지금 10년 운은 금 기운이 짙어 기준감이 또렷해지는 흐름입니다. 다음 10년은 금 기운이 짙어 기준감이 또렷해지는 흐름 쪽으로 무게가 옮겨갈 가능성이 큽니다. Partner: 지금 10년 운은 화의 표현력과 목의 성장력이 함께 움직이는 흐름입니다. 다음 10년은 토 기운이 짙어 안정감이 또렷해지는 흐름 쪽으로 무게가 옮겨갈 가능성이 큽니다.",
  "timingHint": "MBTI로 보면 User은 큰 흐름을 먼저 보고 움직일 때 리듬이 더 잘 살아납니다, Partner은 큰 흐름을 먼저 보고 움직일 때 리듬이 더 잘 살아납니다.

이 관계는 판이 커진 뒤 정리하기보다, 아직 괜찮을 때 기준을 적어 둘수록 훨씬 안정적으로 갑니다. 동업 궁합은 판이 커진 뒤보다 초반에 역할과 돈 기준을 적어 둘 수 있을 때 가장 정확하게 읽힙니다. 확장 결정은 분위기보다 수치 지표를 확인한 뒤 진행하세요.

업무 궁합은 문제 후 수습보다, 시작 전에 기준을 맞춰 둘 때 훨씬 편해집니다.

지금은 신유의 흐름이라 금 기운이 짙어 기준감이 또렷해지는 흐름입니다. Partner: 현재 대운은 33~42세 구간의 정묘 대운입니다. 정묘의 흐름이라 화의 표현력과 목의 성장력이 함께 움직이는 흐름입니다.

올해는 병오의 흐름이라 화 기운이 짙어 표현력이 또렷해지는 흐름입니다.

급히 결론내기보다 두 사람의 호흡이 맞는 타이밍을 골라 이야기할수록 결과가 훨씬 부드럽습니다. 중요한 이야기는 피곤할 때보다 마음이 조금 느슨해진 시간에 꺼내는 편이 좋습니다.",
  "wealthFlow": "이 관계는 돈 이야기를 감정에서 떼어 둘수록 오래 갑니다. 수익보다 권한과 손실 통제 기준이 먼저입니다. 동업 궁합의 돈 흐름은 친밀감보다 권한, 수익 배분, 손실 통제 기준이 실제 문장으로 남는지에서 갈립니다.

지금 두 사람은 강하게 끌리고 또 강하게 배우게 되는 타입. 서로를 바꾸려 하기보다 각자 잘하는 역할을 인정하면 관계의 매력이 훨씬 커집니다.

User는 앞에서 열고, Partner는 옆에서 살피는 식으로 나누면 변동성을 줄이면서 성과를 오래 가져갈 수 있습니다. 돈과 철수 기준을 감정에서 떼어 둘수록 관계와 성과를 함께 지키기 쉬워집니다.",
  "yearlyFlow": "2026년 세운은 병오입니다. 병오의 흐름이라 화 기운이 짙어 표현력이 또렷해지는 흐름입니다.",
}
`;

exports[`saju generator regression snapshots > keeps the focused job change narrative stable 1`] = `
{
  "actions": [
    "지금 회사에서 지키고 싶은 것 1개와 다음 자리에서 얻고 싶은 것 1개를 나눠 적기",
    "관계 이슈가 있으면 결론보다 기대치 정렬(무엇을, 언제까지)을 먼저 합의하기",
    "하루 종료 전 “잘한 점 1개 + 내일의 첫 행동 1개”를 적고 잠들기",
  ],
  "attractionPoint": undefined,
  "caution": "이직 판단은 현재 피로가 다음 자리의 현실 조건을 가리는 순간이 가장 위험합니다. 지금의 피로를 빨리 끝내고 싶은 마음이 다음 자리의 현실 조건을 흐리기 쉽습니다. 눈에 띄는 변화가 늦다고 조급해지면 오히려 본래 강점인 페이스가 무너질 수 있습니다. 지금의 피로를 피하려고만 움직이면 같은 이유로 다시 지치기 쉬우니, 떠나는 이유와 원하는 조건을 분리해서 보는 편이 정확합니다. 지금의 피로만 피하려고 움직이면, 같은 이유로 다시 지치기 쉬운 선택을 반복할 수 있습니다. INFJ 성향인 User님은 배려가 앞서 결정을 미루거나 선을 흐릴 수 있는 점.

특히 토 기운이 지나치게 앞서면 판단이 잠깐 급해질 수 있습니다. 속도를 내기 전에 기준을 한 번만 더 확인하면 흔들림이 크게 줄어듭니다. 월지 축은 양에 놓여 있어, 보호와 보살핌 속에서 힘을 기르는 상태. 큰 수정보다 작은 정리 하나만 해도 흐름의 거친 면은 한결 부드러워집니다. 생각이 정리될 때까지 기다리다 타이밍을 놓치지 않도록 작은 행동부터 시작하세요.",
  "communicationTip": undefined,
  "conflictTrigger": undefined,
  "coreSignal": "이번 이직 타이밍 풀이에서 핵심은 '몰입-정리' 결을 어디에 써야 하는지 가르는 일입니다. 이 결은 벗어나고 싶은 마음과 실제로 옮겨도 되는 조건을 가르는 기준입니다. 지금은 탈출보다 다음 자리에서 보여 줄 문장을 먼저 세우는 편이 맞습니다.

토 기운이 강하다는 건 쉽게 흔들리지 않고 버티는 힘이 좋다는 뜻입니다. 금 기운이 약하다는 건 정리와 결단이 필요한 순간에는 한 번 더 망설이기 쉽습니다. 직업운은 토 기운이 살아날 때 힘이 붙는 흐름입니다. 지금은 금 기운이 짙어 기준감이 또렷해지는 흐름이라, 이것저것 넓히기보다 강점이 가장 잘 보이는 자리를 고를수록 일이 잘 풀립니다.",
  "currentDaewoon": "현재 대운은 33~42세 구간의 신유 대운입니다. 신유의 흐름이라 금 기운이 짙어 기준감이 또렷해지는 흐름입니다. 지금 흐름은 급하게 벗어나는 것보다, 다음 자리에서 어떤 방식으로 성과를 낼 수 있는지가 분명할 때 움직이는 편이 낫습니다.",
  "narrativeFlow": "지금의 피로와 다음 자리의 가능성을 분리해 읽어야, 감정적 탈출과 실제 전환을 구분할 수 있습니다. 지금은 이것저것 넓히기보다, 내가 가장 잘하는 일을 또렷하게 보여줄 때입니다. INFJ 성향인 User님은 큰 흐름을 먼저 보고 움직일 때 리듬이 더 잘 살아납니다. 이번 풀이는 무조건 옮기는 쪽보다, 지금 움직였을 때 생활과 체력이 함께 버틸 수 있는지를 먼저 읽습니다. 요즘 금 기운이 짙어 기준감이 또렷해지는 흐름은 답답함을 크게 느끼게 하는 시기라, 떠날 이유보다 다음 자리 문장을 먼저 세우는 편이 안전합니다.

토 기운이 강하다는 건 쉽게 흔들리지 않고 버티는 힘이 좋다는 뜻입니다. 금 기운이 약하다는 건 정리와 결단이 필요한 순간에는 한 번 더 망설이기 쉽습니다. 급격한 도약보다 단계적으로 쌓을수록 강해지는 타입 작은 승진, 작은 프로젝트, 작은 포트폴리오를 꾸준히 쌓는 방식이 잘 맞습니다. 급격한 도약보다 작은 성취를 이어 붙일수록 결과가 더 또렷해집니다. 이직은 퇴사 결심을 키우는 것보다, 다음 자리에서 낼 결과를 먼저 말할 수 있을 때 훨씬 덜 흔들립니다.",
  "overview": "이직 타이밍은 회사를 싫어하느냐보다, 다음 자리에서 어떤 성과 방식으로 살아날지를 먼저 봐야 정확합니다. 사주상 토 기운이 강하게 잡힌 구조라 토 기운이 강하다는 건 쉽게 흔들리지 않고 버티는 힘이 좋다는 뜻입니다. 금 기운이 약하다는 건 정리와 결단이 필요한 순간에는 한 번 더 망설이기 쉽습니다.

이번 풀이는 무조건 옮기는 쪽보다, 지금 움직였을 때 생활과 체력이 함께 버틸 수 있는지를 먼저 읽습니다. 지금은 '몰입-정리'이 핵심으로 들어오는 시기입니다. 직업운은 토 기운이 살아날 때 힘이 붙는 흐름입니다. 지금은 금 기운이 짙어 기준감이 또렷해지는 흐름이라, 이것저것 넓히기보다 강점이 가장 잘 보이는 자리를 고를수록 일이 잘 풀립니다. 이번 질문에서는 급격한 도약보다 단계적으로 쌓을수록 강해지는 타입 사람의 마음과 목표를 함께 보는 균형감은 이번 시기에서 분명한 강점으로 살아납니다. 눈에 띄는 한 번보다 작은 이력들이 차곡히 쌓이며 힘이 됩니다. 이직운은 떠나는 추진력보다, 다음 자리에서 어떤 결과를 낼지를 말할 수 있을 때 더 강하게 붙습니다.",
  "pairDynamic": undefined,
  "reflectionQuestion": "지금 떠나고 싶은 이유와 다음 자리에서 얻고 싶은 조건을 따로 말할 수 있나요? 지금의 선택이 긴 흐름과도 맞는지 함께 돌아보면 좋습니다.",
  "relationshipFlow": "관계 흐름은 감정의 크기보다 말의 순서와 경계의 밀도에서 더 또렷하게 드러납니다. 직장 대화에서는 감정보다 기준/기한/결과 순서로 말하면 신뢰가 빠르게 쌓입니다. INFJ 성향인 User님은 관계에서는 공감 뒤에 내가 원하는 기준도 함께 말해야 관계가 더 안정됩니다. 토 기운이 강하다는 건 마음이 붙은 관계를 오래 끌고 가는 힘이 있다는 뜻입니다. 반대로 금 기운이 약한 구간에서는 서운함을 바로 끊어 말하기보다 속으로 오래 정리하게 되기 쉽습니다.

좋은 관계일수록 기준을 부드럽게 말해 주는 태도가 중요합니다. 짧더라도 자주 상태를 나누는 방식이 관계의 좋은 결을 오래 살립니다.",
  "sajuBasis": "위 분석표를 먼저 보면 User님의 사주 바탕이 한눈에 들어옵니다. 일간은 무토이고, 기본 바탕은 토 기운이 앞서고 금 기운이 비기 쉬운 구조입니다.

토 기운이 강하다는 건 쉽게 흔들리지 않고 버티는 힘이 좋다는 뜻입니다. 금 기운이 약하다는 건 정리와 결단이 필요한 순간에는 한 번 더 망설이기 쉽습니다. 그래서 이 사주는 강한 부분은 믿고 밀어도 좋지만, 비기 쉬운 부분은 생활 습관으로 채워 줄수록 훨씬 안정됩니다.

이 타고난 바탕 위에 현재 대운과 올해 운이 겹치며 지금의 운이 만들어집니다.",
  "sajuEvidence": [
    "기본 바탕은 토 기운이 강해 쉽게 흔들리지 않고 버티는 힘이 좋다는 뜻입니다. 반대로 금 기운은 비기 쉬워 정리와 결단이 필요한 순간에는 한 번 더 망설이기 쉽습니다.",
    "지금 이 고민에서는 급격한 도약보다 단계적으로 쌓을수록 강해지는 타입.",
    "이번 질문에서는 지금 떠나야 하는 이유와 더 다져야 하는 이유를 동시에 읽어야 합니다.",
    "겉으로 드러난 기운에는 기준을 세우는 힘, 만들어 내는 힘, 책임을 지는 힘이 함께 보입니다. 그래서 밀어붙이기보다 기준을 세우고 쌓아 갈 때 결과가 더 안정적으로 남습니다.",
  ],
  "storyTitle": "User님의 이직 타이밍 풀이",
  "subjectArchetypes": {
    "compatibility": undefined,
    "user": {
      "code": "step_builder",
      "description": "급격한 도약보다 단계적으로 쌓을수록 강해지는 타입",
      "label": "단계축적형",
    },
  },
  "subjectLens": "이직 질문에서는 “떠나고 싶다”와 “옮겨도 괜찮다”를 분리해서 읽는 태도가 필요합니다. 직업운을 보면 토 기운이 살아날 때 강점이 또렷하게 드러납니다. 금 축은 방향이 조금 퍼지기 쉬우니, 맡을 일과 보여줄 결과를 먼저 정해 두면 힘이 더 곧게 모입니다. 잘하고 싶은 마음보다, 지금 내 강점이 가장 또렷하게 보이는 자리를 먼저 고르는 편이 유리합니다. 현재는 급격한 도약보다 단계적으로 쌓을수록 강해지는 타입 작은 승진, 작은 프로젝트, 작은 포트폴리오를 꾸준히 쌓는 방식이 잘 맞습니다.",
  "summary": "이직 타이밍: 이직 타이밍은 당장 떠나고 싶은 마음보다 다음 자리에서 어떤 결과를 낼 사람인지가 먼저 정리돼야 합니다. 퇴사 결심보다 다음 자리에서 보여 줄 결과 한 줄을 먼저 세울수록 판단이 빨라집니다.",
  "tenYearFlow": "지금 10년 운은 금 기운이 짙어 기준감이 또렷해지는 흐름입니다. 다음 10년은 금 기운이 짙어 기준감이 또렷해지는 흐름 쪽으로 무게가 옮겨갈 가능성이 큽니다. 앞으로 10년은 한 번의 이직보다, 어떤 환경에서 오래 버틸 수 있는지를 알아 가는 과정이 더 중요합니다.",
  "timingHint": "이직 타이밍은 퇴사 충동이 큰 순간보다, 다음 자리에서 보여 줄 결과를 짧게 말할 수 있을 때가 더 정확합니다. 이직은 답답함이 가장 큰 순간보다, 다음 자리에서 보여 줄 문장이 짧게 정리됐을 때 훨씬 정확합니다. INFJ 성향인 User님은 큰 흐름을 먼저 보고 움직일 때 리듬이 더 잘 살아납니다. 중요 보고/제안은 오전 시간대에 먼저 던지는 편이 반응이 좋습니다. 이직은 답답함이 최고조일 때보다, 다음 자리에서 보여 줄 결과를 짧게 정리했을 때 잡는 편이 더 낫습니다. 현재 큰 운은 신유의 흐름이라 금 기운이 짙어 기준감이 또렷해지는 흐름입니다. 지금 흐름은 급하게 벗어나는 것보다, 다음 자리에서 어떤 방식으로 성과를 낼 수 있는지가 분명할 때 움직이는 편이 낫습니다. 올해는 병오의 흐름이라 화 기운이 짙어 표현력이 또렷해지는 흐름입니다. 올해는 답답함 때문에 결론을 내리기보다, 원하는 조건과 피하고 싶은 조건을 분리할수록 선택이 선명해집니다. 월지 축은 양에 놓여 있어, 보호와 보살핌 속에서 힘을 기르는 상태. 그래서 서두르기보다 흐름이 붙는 시간대를 골라 움직일수록 결과가 더 매끈하게 이어집니다.",
  "wealthFlow": "이직 흐름은 떠나는 이유보다 다음 자리에서 보여 줄 결과와 버틸 생활 리듬이 함께 있는지에서 갈립니다. 다음 자리 조건, 버틸 생활 리듬, 보여 줄 결과를 함께 정리해야 이직 해석이 실제 선택에 도움이 됩니다. INFJ 성향인 User님은 돈과 일에서는 예산과 계획을 먼저 세울수록 돈의 흐름을 안정적으로 다루는 힘이 커집니다. 이직 타이밍은 마음이 떠났느냐보다, 다음 자리에서 내가 어떤 방식으로 성과를 낼 수 있는지가 분명한지를 먼저 봐야 합니다. 일의 결을 보면 급격한 도약보다 단계적으로 쌓을수록 강해지는 타입. 토 기운이 강하다는 건 일의 방식에서 이 장점이 먼저 드러난다는 뜻입니다.

반대로 금 기운이 약한 구간에서는 역할을 잘라내거나 기준을 다시 세우는 일이 늦어지기 쉽습니다. 그래서 작은 승진, 작은 프로젝트, 작은 포트폴리오를 꾸준히 쌓는 방식이 잘 맞습니다. 지금은 다음 자리 조건과 버틸 생활 리듬을 같이 적어 둘수록 판단이 덜 흔들립니다.",
  "yearlyFlow": "2026년 세운은 병오입니다. 병오의 흐름이라 화 기운이 짙어 표현력이 또렷해지는 흐름입니다. 올해는 답답함 때문에 결론을 내리기보다, 원하는 조건과 피하고 싶은 조건을 분리할수록 선택이 선명해집니다.",
}
`;

exports[`saju generator regression snapshots > keeps the focused left-on-read compatibility narrative stable 1`] = `
{
  "actions": [
    "답장 속도 대신 관계 온도를 판단할 기준 1개를 먼저 정하기",
    "중요한 대화 1건은 사실-느낌-요청 순서로 짧게 정리해 전달하기",
    "오늘 해야 할 일을 3개만 남기고, 가장 작은 1개를 15분 안에 먼저 끝내기",
  ],
  "attractionPoint": "서로에게 없는 관점을 보완해 주는 데서 매력이 커집니다. 서로의 강점 축(토/토)이 다르면 보완 관계로 작동해 끌림과 신뢰가 함께 높아집니다.",
  "caution": "MBTI로 보면 User은 배려가 앞서 결정을 미루거나 선을 흐릴 수 있는 점, Partner은 정답을 빨리 찾으려다 마음의 온도를 놓칠 수 있는 점. 답장 속도만으로 관계 전체를 단정하면 실제로 남아 있는 호흡을 놓치기 쉽습니다. 읽씹 궁합은 답장 속도 하나가 관계 전체의 의미를 대신하기 쉽습니다. 짧은 침묵 하나에 관계 전체의 의미를 너무 빨리 덧씌우기 쉽습니다. 감정이 뜨거울수록 말의 세기도 세질 수 있어, 감정이 오른 날은 결론을 미루는 편이 안전합니다. 좋은 신호 하나에 너무 큰 기대를 싣거나, 나쁜 신호 하나로 관계 전체를 단정하지 않는 태도가 중요합니다.

특히 토 기운이 지나치게 앞서면 판단이 잠깐 급해질 수 있습니다. 마음이 지친 날엔 결정보다 회복을 먼저 챙기면 다음 선택이 훨씬 선명해집니다. 월지 축은 양에 놓여 있어, 보호와 보살핌 속에서 힘을 기르는 상태. 큰 수정보다 작은 정리 하나만 해도 흐름의 거친 면은 한결 부드러워집니다. 생각이 정리될 때까지 기다리다 타이밍을 놓치지 않도록 작은 행동부터 시작하세요.",
  "communicationTip": "왜 답이 늦었는지 캐묻기보다, 편한 시간대와 답장 스타일을 먼저 맞추는 편이 이 관계에는 더 효과적입니다. 답장 속도 하나만으로 관계를 단정하기보다, 대화의 길이와 온도까지 같이 보는 편이 훨씬 정확합니다.",
  "conflictTrigger": "짧은 답장을 가볍게 여기는 쪽과 거리감으로 받아들이는 쪽이 만나면 작은 침묵도 크게 느껴질 수 있습니다. 기대하는 연락 리듬을 말하지 않으면 오해가 생각보다 오래 남습니다.",
  "coreSignal": "이번 읽씹하는 그 사람 궁합에서 핵심은 '안정-확장' 리듬이 실제 관계 기준으로 이어질 수 있는지 읽는 일입니다. 이 리듬은 답장 속도 하나가 아니라 두 사람이 편하다고 느끼는 연락 템포 차이를 보여 줍니다. 지금은 침묵의 의미를 단정하기보다 말 길이와 반응선이 맞는지부터 봐야 합니다.

무토와 경금의 애정 흐름은 User의 토 기운과 Partner의 토 기운에서 끌림이 자연스럽게 커지고 금·화 축에서 말의 온도가 어긋나기 쉬운 형태입니다. 토 일간이 금 일간을 생하는 상생 관계라, 한쪽이 흐름을 열면 다른 쪽이 자연스럽게 반응하는 편입니다. 감정의 속도만 잘 맞춰도 이 궁합의 좋은 결이 훨씬 오래 살아납니다.",
  "currentDaewoon": "User: 현재 대운은 33~42세 구간의 신유 대운입니다. 신유의 흐름이라 금 기운이 짙어 기준감이 또렷해지는 흐름입니다. Partner: 현재 대운은 33~42세 구간의 정묘 대운입니다. 정묘의 흐름이라 화의 표현력과 목의 성장력이 함께 움직이는 흐름입니다.",
  "narrativeFlow": "MBTI로 보면 User은 큰 흐름을 먼저 보고 움직일 때 리듬이 더 잘 살아납니다, Partner은 큰 흐름을 먼저 보고 움직일 때 리듬이 더 잘 살아납니다. 이 질문에서는 침묵을 바로 단정하지 말고, 말의 길이와 답장 온도가 서로 다르게 해석되고 있는지를 먼저 봐야 합니다. 관계의 신호를 읽는 감각과 조급함을 다루는 태도가 결과를 가릅니다. 이번 궁합은 답장 자체보다, 두 사람이 기대하는 연락 템포와 감정 거리감이 어디서 어긋나는지를 중심으로 읽습니다. User - Partner는 차이를 지우는 관계가 아니라, 역할을 잘 나눌 때 더 편안하고 단단해지는 관계입니다.

지금은 강하게 끌리고 또 강하게 배우게 되는 타입 서로를 바꾸려 하기보다 각자 잘하는 역할을 인정하면 관계의 매력이 훨씬 커집니다. 잘 맞는 날의 힘을 생활 규칙으로 옮겨 놓으면 뜨거움이 오래 갑니다. 서로의 성향 차이를 억지로 줄이기보다 각자의 리듬을 인정할수록 궁합이 훨씬 부드럽게 이어집니다.",
  "overview": "읽씹처럼 보이는 상황은 호감 유무만이 아니라 답장 압박, 대화 템포, 관계 정의 부담이 함께 얽혀 있을 수 있습니다. 두 사람의 궁합은 '마른 가지 끝에 새순이 붙으며 결이 살아나는 장면'처럼 호흡이 맞을 때 훨씬 편안하게 이어집니다. 이번 궁합은 답장 자체보다, 두 사람이 기대하는 연락 템포와 감정 거리감이 어디서 어긋나는지를 중심으로 읽습니다. 무토와 경금의 애정 흐름은 User의 토 기운과 Partner의 토 기운에서 끌림이 자연스럽게 커지고 금·화 축에서 말의 온도가 어긋나기 쉬운 형태입니다. 토 일간이 금 일간을 생하는 상생 관계라, 한쪽이 흐름을 열면 다른 쪽이 자연스럽게 반응하는 편입니다. 감정의 속도만 잘 맞춰도 이 궁합의 좋은 결이 훨씬 오래 살아납니다.

지금 두 사람은 강하게 끌리고 또 강하게 배우게 되는 타입. 강하게 끌리는 만큼 서로에게 배우게 되는 힘도 큰 관계입니다. 서로를 바꾸려 하기보다 각자 강한 부분을 살리고 약한 부분을 보완할 때 관계의 장점이 더 크게 드러납니다.",
  "pairDynamic": "이 관계는 마음의 크기보다 답장 템포와 기대치 차이에서 체감이 크게 갈리는 타입입니다. 호감이 있어도 표현 방식이 다르면 한쪽은 끊겼다고 느끼고, 한쪽은 아직 괜찮다고 느끼기 쉽습니다.",
  "reflectionQuestion": "지금 가장 크게 흔드는 것은 답장 속도인가요, 그 속도에 내가 부여한 의미인가요? 지금의 선택이 긴 흐름과도 맞는지 함께 돌아보면 좋습니다.",
  "relationshipFlow": "MBTI로 보면 관계에서는 User은 공감 뒤에 내가 원하는 기준도 함께 말해야 관계가 더 안정됩니다, Partner은 기준을 말할 때 이유와 마음을 한 문장 더 붙이면 관계의 마찰이 줄어듭니다. 관계 쪽에서는 큰 고백보다 가볍지만 끊기지 않는 연결이 실제 합을 더 잘 보여 줍니다. 읽씹 궁합은 답장 빈도보다 두 사람이 편하다고 느끼는 연락 템포와 압박감의 차이에서 읽어야 합니다. 관계를 보면 User의 토 기운과 Partner의 토 기운이 만날 때 시너지가 분명합니다. 지금 두 사람은 강하게 끌리고 또 강하게 배우게 되는 타입. 서로를 바꾸려 하기보다 각자 잘하는 역할을 인정하면 관계의 매력이 훨씬 커집니다.

다만 금·화 축에서는 오해가 잠깐 붙기 쉽습니다. 답장 하나보다 며칠의 말 흐름이 다시 편안해지는지부터 보는 편이 맞습니다.",
  "sajuBasis": "위 분석표를 먼저 보면 두 사람의 사주 바탕이 한눈에 들어옵니다. User은 무토 일간이고, Partner은 경금 일간입니다.

User은 쉽게 흔들리지 않고 버티는 힘이 좋다는 뜻입니다 Partner은 쉽게 흔들리지 않고 버티는 힘이 좋다는 뜻입니다. 궁합은 이렇게 다른 타고난 결이 지금 들어온 운과 만나며 어떤 분위기를 만드는지 함께 읽어야 정확해집니다.",
  "sajuEvidence": [
    "User은 토 기운이 강해 쉽게 흔들리지 않고 버티는 힘이 좋다는 뜻입니다. Partner는 토 기운이 강해 쉽게 흔들리지 않고 버티는 힘이 좋다는 뜻입니다.",
    "User은 금 축에서 정리와 결단이 필요한 순간에는 한 번 더 망설이기 쉽습니다. Partner는 마음을 바로 드러내거나 분위기를 빠르게 띄우는 일에는 에너지가 더 들 수 있습니다.",
    "이번 질문에서는 침묵의 길이만이 아니라, 두 사람이 기대하는 연락 템포가 얼마나 다른지를 읽어야 합니다.",
    "User 쪽은 월지 축은 양에 놓여 있어, 보호와 보살핌 속에서 힘을 기르는 상태. Partner 쪽은 월지 해는 병에 놓여 있어, 부담이 쌓이면 쉽게 지치므로 무리하면 손해가 나는 상태. 그래서 두 사람 모두 서두르기보다 각자 편한 리듬을 먼저 맞출수록 관계의 장점이 더 잘 살아납니다.",
  ],
  "storyTitle": "User - Partner의 읽씹하는 그 사람 궁합 풀이",
  "subjectArchetypes": {
    "compatibility": {
      "code": "tension_growth",
      "description": "강하게 끌리고 또 강하게 배우게 되는 타입",
      "label": "긴장성장형",
    },
    "user": undefined,
  },
  "subjectLens": "User와 Partner의 궁합은 설렘 자체보다, 실제 대화와 생활 리듬이 이어질 수 있는지 보는 편이 더 정확합니다. 토 기운의 장점은 끌림을 오래 가져가는 데 있고, 금 축은 기대가 커질수록 혼자 해석이 길어지기 쉬우니 신호를 가볍게 확인하는 태도가 필요합니다. 읽씹 궁합은 답장 속도 하나보다, 두 사람이 편하다고 느끼는 연락 리듬이 실제로 겹치는지를 보는 편이 정확합니다. 읽씹처럼 보이는 상황은 호감의 유무만이 아니라 답장 압박, 대화 템포, 관계 정의에 대한 부담이 함께 얽히는 경우가 많습니다.",
  "summary": "읽씹하는 그 사람: 이번 궁합은 답장 자체보다, 두 사람이 기대하는 연락 템포와 감정 거리감이 어디서 어긋나는지를 읽는 데 초점을 둡니다. 답장 유무보다 말이 다시 편안해지는 속도를 보는 쪽이 더 정확합니다.",
  "tenYearFlow": "User: 지금 10년 운은 금 기운이 짙어 기준감이 또렷해지는 흐름입니다. 다음 10년은 금 기운이 짙어 기준감이 또렷해지는 흐름 쪽으로 무게가 옮겨갈 가능성이 큽니다. Partner: 지금 10년 운은 화의 표현력과 목의 성장력이 함께 움직이는 흐름입니다. 다음 10년은 토 기운이 짙어 안정감이 또렷해지는 흐름 쪽으로 무게가 옮겨갈 가능성이 큽니다.",
  "timingHint": "MBTI로 보면 User은 큰 흐름을 먼저 보고 움직일 때 리듬이 더 잘 살아납니다, Partner은 큰 흐름을 먼저 보고 움직일 때 리듬이 더 잘 살아납니다.

이 관계는 왜 답이 늦었는지 따지는 순간보다, 편한 시간대와 말 길이를 맞추려 할 때 흐름이 더 잘 보입니다. 읽씹 궁합은 왜 늦었는지 따지는 순간보다 편한 시간대와 말 길이를 맞춰 볼 때 흐름이 더 잘 보입니다. 메시지 템포를 맞추되, 관계 정의는 서두르지 않는 균형이 좋습니다.

관계 진전은 감정이 가장 뜨거울 때보다 서로의 일상 템포가 맞을 때 훨씬 자연스럽습니다.

지금은 신유의 흐름이라 금 기운이 짙어 기준감이 또렷해지는 흐름입니다. Partner: 현재 대운은 33~42세 구간의 정묘 대운입니다. 정묘의 흐름이라 화의 표현력과 목의 성장력이 함께 움직이는 흐름입니다.

올해는 병오의 흐름이라 화 기운이 짙어 표현력이 또렷해지는 흐름입니다.

급히 결론내기보다 두 사람의 호흡이 맞는 타이밍을 골라 이야기할수록 결과가 훨씬 부드럽습니다. 중요한 이야기는 피곤할 때보다 마음이 조금 느슨해진 시간에 꺼내는 편이 좋습니다.",
  "wealthFlow": "초기 관계는 시간과 감정을 쓰는 방식이 엇갈릴 때 일상 리듬까지 쉽게 흔들릴 수 있습니다. 협업과 돈 흐름은 좋은 의도보다 역할과 기준이 얼마나 또렷한지에서 더 분명하게 드러납니다.

지금 두 사람은 강하게 끌리고 또 강하게 배우게 되는 타입. 서로를 바꾸려 하기보다 각자 잘하는 역할을 인정하면 관계의 매력이 훨씬 커집니다.

User는 앞에서 열고, Partner는 옆에서 살피는 식으로 나누면 변동성을 줄이면서 성과를 오래 가져갈 수 있습니다. 돈과 역할을 감정에서 떼어 기준으로 정리해 둘수록 관계도 함께 편해집니다.",
  "yearlyFlow": "2026년 세운은 병오입니다. 병오의 흐름이라 화 기운이 짙어 표현력이 또렷해지는 흐름입니다.",
}
`;

exports[`saju generator regression snapshots > keeps the focused reconciliation narrative stable 1`] = `
{
  "actions": [
    "다시 이어지고 싶은 이유 1개와 달라져야 할 점 1개를 따로 적어 보기",
    "관계 이슈가 있으면 결론보다 기대치 정렬(무엇을, 언제까지)을 먼저 합의하기",
    "하루 종료 전 “잘한 점 1개 + 내일의 첫 행동 1개”를 적고 잠들기",
  ],
  "attractionPoint": undefined,
  "caution": "재회 판단에서는 반가움이 기준을 대신하기 쉽습니다. 그리움이 큰 날일수록 예전의 문제를 덜 중요하게 여기기 쉽습니다. 확신이 들기 전까지 너무 거리를 두면 좋은 인연도 스쳐 지나갈 수 있습니다. 반가움만으로 다시 붙으면 예전의 익숙한 상처도 함께 되살아나기 쉬우니, 달라질 부분을 먼저 보는 편이 낫습니다. 외로움이나 죄책감을 가능성으로 착각하면 다시 이어져도 같은 상처가 더 빨리 되살아날 수 있습니다. INFJ 성향인 User님은 배려가 앞서 결정을 미루거나 선을 흐릴 수 있는 점.

특히 토 기운이 지나치게 앞서면 판단이 잠깐 급해질 수 있습니다. 속도를 내기 전에 기준을 한 번만 더 확인하면 흔들림이 크게 줄어듭니다. 월지 축은 양에 놓여 있어, 보호와 보살핌 속에서 힘을 기르는 상태. 큰 수정보다 작은 정리 하나만 해도 흐름의 거친 면은 한결 부드러워집니다. 생각이 정리될 때까지 기다리다 타이밍을 놓치지 않도록 작은 행동부터 시작하세요.",
  "communicationTip": undefined,
  "conflictTrigger": undefined,
  "coreSignal": "이번 재회 가능성 풀이에서 핵심은 '몰입-정리' 결을 어디에 써야 하는지 가르는 일입니다. 이 결은 다시 만나느냐 자체보다, 다시 만나도 괜찮을 조건을 가려낼 때 가장 또렷하게 드러납니다. 지금은 반가움보다 달라져야 할 기준을 먼저 세워야 흐름을 놓치지 않습니다.

토 기운이 강하다는 건 쉽게 흔들리지 않고 버티는 힘이 좋다는 뜻입니다. 금 기운이 약하다는 건 정리와 결단이 필요한 순간에는 한 번 더 망설이기 쉽습니다. 연애운은 끌림보다 관계의 속도 조절이 중요한 흐름입니다. 마음은 빨리 움직여도, 지금은 금 기운이 짙어 기준감이 또렷해지는 흐름을 따라 관계 온도를 맞춰 갈 때 훨씬 편안합니다.",
  "currentDaewoon": "현재 대운은 33~42세 구간의 신유 대운입니다. 신유의 흐름이라 금 기운이 짙어 기준감이 또렷해지는 흐름입니다.",
  "narrativeFlow": "좋았던 장면이 남아 있는 것과 다시 관계를 감당할 준비가 된 것은 다른 문제이므로, 그 둘을 갈라서 읽어야 합니다. 관계의 속도보다 감정의 온도를 맞출 때 진짜 안정감이 만들어집니다. INFJ 성향인 User님은 큰 흐름을 먼저 보고 움직일 때 리듬이 더 잘 살아납니다. 이번 풀이는 다시 만날 수 있는지보다, 다시 만나도 같은 상처를 반복하지 않을 수 있는지를 함께 봅니다. 요즘 금 기운이 짙어 기준감이 또렷해지는 흐름은 올라올수록 다시 보고 싶은 마음과 다시 버틸 수 있는 마음을 헷갈리지 않는 일이 중요합니다.

토 기운이 강하다는 건 쉽게 흔들리지 않고 버티는 힘이 좋다는 뜻입니다. 금 기운이 약하다는 건 정리와 결단이 필요한 순간에는 한 번 더 망설이기 쉽습니다. 마음이 열리기까지 시간이 필요하고, 관계 거리 조절이 중요한 타입 속도를 천천히 맞추고 안정감을 먼저 쌓는 관계가 더 오래 갑니다. 재회는 큰 결심보다 예전과 다른 반응 하나를 끝까지 지키는 쪽에서 가능성이 생깁니다.",
  "overview": "재회 질문은 미련의 크기보다, 이전의 끊긴 이유가 지금은 달라질 수 있는지를 먼저 봐야 정확합니다. 사주상 토 기운이 강하게 잡힌 구조라 토 기운이 강하다는 건 쉽게 흔들리지 않고 버티는 힘이 좋다는 뜻입니다. 금 기운이 약하다는 건 정리와 결단이 필요한 순간에는 한 번 더 망설이기 쉽습니다.

이번 풀이는 다시 만날 수 있는지보다, 다시 만나도 같은 상처를 반복하지 않을 수 있는지를 함께 봅니다. 지금은 '몰입-정리'이 핵심으로 들어오는 시기입니다. 연애운은 끌림보다 관계의 속도 조절이 중요한 흐름입니다. 마음은 빨리 움직여도, 지금은 금 기운이 짙어 기준감이 또렷해지는 흐름을 따라 관계 온도를 맞춰 갈 때 훨씬 편안합니다. 이번 질문에서는 마음이 열리기까지 시간이 필요하고, 관계 거리 조절이 중요한 타입 서두르지 않아도 결국 방향을 맞추는 힘은 이번 시기에서 분명한 강점으로 살아납니다. 재회 가능성은 반가움보다 회복 규칙이 먼저 서야 현실로 붙습니다.",
  "pairDynamic": undefined,
  "reflectionQuestion": "다시 만나고 싶은 마음과 다시 만나도 안전한 관계인지에 대한 답이 같은가요? 지금의 선택이 긴 흐름과도 맞는지 함께 돌아보면 좋습니다.",
  "relationshipFlow": "재회 흐름은 누가 먼저 손을 내미느냐보다, 예전과 다른 경계와 대화 순서를 실제로 지킬 수 있는지에서 갈립니다. 관계 쪽에서는 다시 붙는 계기보다, 예전과 다른 대화 순서와 경계가 실제로 가능해졌는지를 먼저 봐야 합니다. INFJ 성향인 User님은 관계에서는 공감 뒤에 내가 원하는 기준도 함께 말해야 관계가 더 안정됩니다. 재회 가능성은 마음이 남아 있느냐보다, 다시 이어졌을 때 예전보다 덜 다치게 만날 수 있는지가 더 중요합니다. 토 기운이 강하다는 건 마음이 붙은 관계를 오래 끌고 가는 힘이 있다는 뜻입니다. 반대로 금 기운이 약한 구간에서는 서운함을 바로 끊어 말하기보다 속으로 오래 정리하게 되기 쉽습니다.

마음이 열리기까지 시간이 필요하고, 관계 거리 조절이 중요한 타입. 속도를 천천히 맞추고 안정감을 먼저 쌓는 관계가 더 오래 갑니다. 다시 붙고 싶다면 반가움보다 달라진 점을 먼저 말할 수 있을 때 관계가 훨씬 안전해집니다.",
  "sajuBasis": "위 분석표를 먼저 보면 User님의 사주 바탕이 한눈에 들어옵니다. 일간은 무토이고, 기본 바탕은 토 기운이 앞서고 금 기운이 비기 쉬운 구조입니다.

토 기운이 강하다는 건 쉽게 흔들리지 않고 버티는 힘이 좋다는 뜻입니다. 금 기운이 약하다는 건 정리와 결단이 필요한 순간에는 한 번 더 망설이기 쉽습니다. 그래서 이 사주는 강한 부분은 믿고 밀어도 좋지만, 비기 쉬운 부분은 생활 습관으로 채워 줄수록 훨씬 안정됩니다.

이 타고난 바탕 위에 현재 대운과 올해 운이 겹치며 지금의 운이 만들어집니다.",
  "sajuEvidence": [
    "기본 바탕은 토 기운이 강해 쉽게 흔들리지 않고 버티는 힘이 좋다는 뜻입니다. 반대로 금 기운은 비기 쉬워 정리와 결단이 필요한 순간에는 한 번 더 망설이기 쉽습니다.",
    "지금 이 고민에서는 마음이 열리기까지 시간이 필요하고, 관계 거리 조절이 중요한 타입.",
    "이번 질문에서는 다시 이어질 여지와 동시에, 다시 이어졌을 때 무엇이 반드시 달라져야 하는지를 함께 읽어야 합니다.",
    "겉으로 드러난 기운에는 기준을 세우는 힘, 만들어 내는 힘, 책임을 지는 힘이 함께 보입니다. 그래서 밀어붙이기보다 기준을 세우고 쌓아 갈 때 결과가 더 안정적으로 남습니다.",
  ],
  "storyTitle": "User님의 재회 가능성 풀이",
  "subjectArchetypes": {
    "compatibility": undefined,
    "user": {
      "code": "careful_distance",
      "description": "마음이 열리기까지 시간이 필요하고, 관계 거리 조절이 중요한 타입",
      "label": "신중거리형",
    },
  },
  "subjectLens": "재회 가능성에서는 반가움과 안정 가능성을 분리해서 읽는 태도가 가장 중요합니다. 연애운 렌즈: 토 기운은 표현력과 끌림을 키우고, 금 축은 오해를 키우기 쉽습니다. 감정 표현은 부드럽게, 기대치는 구체적으로 말하는 방식이 유리합니다. 미련의 크기보다, 이전에 막혔던 패턴이 지금은 달라질 수 있는지를 먼저 보는 편이 정확합니다. 현재는 마음이 열리기까지 시간이 필요하고, 관계 거리 조절이 중요한 타입 속도를 천천히 맞추고 안정감을 먼저 쌓는 관계가 더 오래 갑니다.",
  "summary": "재회 가능성: 재회 가능성은 보고 싶은 마음보다 다시 만나도 덜 다칠 구조가 생겼는지부터 봐야 정확합니다. 지금은 다시 붙는 용기보다 예전과 다른 경계와 말 순서를 만들 수 있는지가 더 중요합니다.",
  "tenYearFlow": "지금 10년 운은 금 기운이 짙어 기준감이 또렷해지는 흐름입니다. 다음 10년은 금 기운이 짙어 기준감이 또렷해지는 흐름 쪽으로 무게가 옮겨갈 가능성이 큽니다.",
  "timingHint": "재회 타이밍은 보고 싶은 날보다 예전보다 다른 말 순서를 실제로 낼 수 있을 때 잡는 편이 맞습니다. 재회는 연락 한 번보다 서로의 생활과 감정이 예전보다 덜 흔들리는 구간에서 실마리가 보입니다. INFJ 성향인 User님은 큰 흐름을 먼저 보고 움직일 때 리듬이 더 잘 살아납니다. 중요한 고백/대화는 피곤한 시간대를 피하고 여유 있는 시간에 진행하세요. 마음이 가장 커졌을 때보다, 생활 리듬이 조금 안정된 순간에 움직이는 편이 더 잘 맞습니다. 현재 큰 운은 신유의 흐름이라 금 기운이 짙어 기준감이 또렷해지는 흐름입니다. 올해는 병오의 흐름이라 화 기운이 짙어 표현력이 또렷해지는 흐름입니다. 월지 축은 양에 놓여 있어, 보호와 보살핌 속에서 힘을 기르는 상태. 그래서 서두르기보다 흐름이 붙는 시간대를 골라 움직일수록 결과가 더 매끈하게 이어집니다.",
  "wealthFlow": "일과 돈 흐름은 눈앞의 수치보다 유지 구조와 반복 가능한 리듬에서 더 크게 벌어집니다. 연애 스트레스가 업무 집중을 흔들 수 있으니 하루 경계 시간을 분리해 두세요. INFJ 성향인 User님은 돈과 일에서는 예산과 계획을 먼저 세울수록 돈의 흐름을 안정적으로 다루는 힘이 커집니다. 재물운을 보면 버는 힘보다 새는 구멍을 막을 때 재물운이 살아나는 타입. 토 기운이 강하다는 건 돈을 다루는 감각에서 이 장점이 먼저 드러난다는 뜻입니다.

반대로 금 기운이 약한 구간에서는 돈이 새는 이유를 늦게 알아차리기 쉽습니다. 그래서 인맥·감정·충동 때문에 나가는 돈을 먼저 줄이면 재물의 체감이 금방 달라집니다. 작은 기준 하나를 반복 가능한 구조로 만드는 편이 결과를 더 오래 붙잡습니다.",
  "yearlyFlow": "2026년 세운은 병오입니다. 병오의 흐름이라 화 기운이 짙어 표현력이 또렷해지는 흐름입니다.",
}
`;

exports[`saju generator regression snapshots > keeps the focused wealth leak narrative stable 1`] = `
{
  "actions": [
    "지난 7일 지출에서 “생각 없이 나간 돈” 1가지만 바로 막기",
    "에너지가 빠지는 일정 1개를 줄이고 회복 시간 30분을 먼저 확보하기",
    "이번 주 소비/시간 로그를 7일만 기록해 반복 패턴을 확인하기",
  ],
  "attractionPoint": undefined,
  "caution": "누수 문제는 필요한 지출과 불안을 달래는 소비가 섞일 때 가장 헷갈립니다. 피로와 죄책감이 올라오는 순간 소비를 합리화하기 쉽습니다. 사람과의 관계를 돈으로 해결하려 들면 정작 내 몫으로 남는 것이 적어지기 쉽습니다. 불안할수록 한 번에 크게 바꾸려 하기보다, 새는 구멍 1개를 먼저 막는 편이 훨씬 효과적입니다. 불안을 달래는 지출을 필요 비용으로 포장하기 시작하면 흐름을 더 오래 놓치기 쉽습니다. INFJ 성향인 User님은 배려가 앞서 결정을 미루거나 선을 흐릴 수 있는 점.

특히 토 기운이 지나치게 앞서면 판단이 잠깐 급해질 수 있습니다. 마음이 지친 날엔 결정보다 회복을 먼저 챙기면 다음 선택이 훨씬 선명해집니다. 월지 축은 양에 놓여 있어, 보호와 보살핌 속에서 힘을 기르는 상태. 큰 수정보다 작은 정리 하나만 해도 흐름의 거친 면은 한결 부드러워집니다. 생각이 정리될 때까지 기다리다 타이밍을 놓치지 않도록 작은 행동부터 시작하세요.",
  "communicationTip": undefined,
  "conflictTrigger": undefined,
  "coreSignal": "이번 돈이 새는 이유 풀이에서 핵심은 '안정-확장' 결을 어디에 써야 하는지 가르는 일입니다. 이 결은 더 벌 방법보다 왜 돈이 자꾸 새는지의 패턴을 드러냅니다. 지금은 지출 항목보다 감정과 관계가 소비로 번지는 순간을 먼저 끊어야 합니다.

토 기운이 강하다는 건 쉽게 흔들리지 않고 버티는 힘이 좋다는 뜻입니다. 금 기운이 약하다는 건 정리와 결단이 필요한 순간에는 한 번 더 망설이기 쉽습니다. 재물운은 토 쪽에서 벌고 금 쪽에서 새기 쉬운 흐름입니다. 지금은 금 기운이 짙어 기준감이 또렷해지는 흐름이라, 무작정 늘리기보다 돈의 흐름을 정리하고 기준을 세우는 편이 먼저입니다.",
  "currentDaewoon": "현재 대운은 33~42세 구간의 신유 대운입니다. 신유의 흐름이라 금 기운이 짙어 기준감이 또렷해지는 흐름입니다.",
  "narrativeFlow": "누수 질문에서는 수입 부족과 구조 누수를 분리해 읽어야, 당장 막을 구멍이 선명해집니다. 큰 행운 한 번보다 새는 구멍을 막는 습관이 돈의 체력을 만들 시기입니다. INFJ 성향인 User님은 큰 흐름을 먼저 보고 움직일 때 리듬이 더 잘 살아납니다. 이번 풀이는 수입 확대보다, 모르는 사이 빠져나가는 돈과 마음을 먼저 정리하는 데 집중합니다. 요즘 금 기운이 짙어 기준감이 또렷해지는 흐름은 피로와 소비를 한 줄로 묶기 쉬운 때라, 새는 장면을 생활 단위로 끊어 보는 일이 먼저입니다.

토 기운이 강하다는 건 쉽게 흔들리지 않고 버티는 힘이 좋다는 뜻입니다. 금 기운이 약하다는 건 정리와 결단이 필요한 순간에는 한 번 더 망설이기 쉽습니다. 버는 힘보다 새는 구멍을 막을 때 재물운이 살아나는 타입 인맥·감정·충동 때문에 나가는 돈을 먼저 줄이면 재물의 체감이 금방 달라집니다. 더 벌기 전에 새는 구멍을 줄이면 돈이 머무는 속도가 훨씬 빨라집니다. 누수는 의지보다 피곤한 장면의 동선과 결제 습관을 먼저 바꿀 때 더 빨리 멈춥니다.",
  "overview": "돈이 새는 이유는 지출 항목만이 아니라 피로, 관계, 충동, 죄책감이 소비로 번지는 구조를 같이 봐야 합니다. 사주상 토 기운이 강하게 잡힌 구조라 토 기운이 강하다는 건 쉽게 흔들리지 않고 버티는 힘이 좋다는 뜻입니다. 금 기운이 약하다는 건 정리와 결단이 필요한 순간에는 한 번 더 망설이기 쉽습니다.

이번 풀이는 수입 확대보다, 모르는 사이 빠져나가는 돈과 마음을 먼저 정리하는 데 집중합니다. 지금은 '안정-확장'이 핵심으로 들어오는 시기입니다. 재물운은 토 쪽에서 벌고 금 쪽에서 새기 쉬운 흐름입니다. 지금은 금 기운이 짙어 기준감이 또렷해지는 흐름이라, 무작정 늘리기보다 돈의 흐름을 정리하고 기준을 세우는 편이 먼저입니다. 이번 질문에서는 버는 힘보다 새는 구멍을 막을 때 재물운이 살아나는 타입 작은 변화에서 흐름의 단서를 찾는 감각은 이번 시기에서 분명한 강점으로 살아납니다. 새는 구멍만 줄여도 복이 남는 속도가 눈에 띄게 달라집니다. 누수 흐름은 더 버는 힘보다, 피곤할 때 무너지는 소비 장면을 끊을수록 빠르게 달라집니다.",
  "pairDynamic": undefined,
  "reflectionQuestion": "내 소비를 누르는 감정 트리거는 언제 가장 자주 올라오나요? 지금의 선택이 긴 흐름과도 맞는지 함께 돌아보면 좋습니다.",
  "relationshipFlow": "관계 흐름은 감정의 크기보다 말의 순서와 경계의 밀도에서 더 또렷하게 드러납니다. 돈 이야기는 감정이 상하기 쉬우니 숫자 기준으로 합의하는 습관이 중요합니다. INFJ 성향인 User님은 관계에서는 공감 뒤에 내가 원하는 기준도 함께 말해야 관계가 더 안정됩니다. 토 기운이 강하다는 건 마음이 붙은 관계를 오래 끌고 가는 힘이 있다는 뜻입니다. 반대로 금 기운이 약한 구간에서는 서운함을 바로 끊어 말하기보다 속으로 오래 정리하게 되기 쉽습니다.

좋은 관계일수록 기준을 부드럽게 말해 주는 태도가 중요합니다. 짧더라도 자주 상태를 나누는 방식이 관계의 좋은 결을 오래 살립니다.",
  "sajuBasis": "위 분석표를 먼저 보면 User님의 사주 바탕이 한눈에 들어옵니다. 일간은 무토이고, 기본 바탕은 토 기운이 앞서고 금 기운이 비기 쉬운 구조입니다.

토 기운이 강하다는 건 쉽게 흔들리지 않고 버티는 힘이 좋다는 뜻입니다. 금 기운이 약하다는 건 정리와 결단이 필요한 순간에는 한 번 더 망설이기 쉽습니다. 그래서 이 사주는 강한 부분은 믿고 밀어도 좋지만, 비기 쉬운 부분은 생활 습관으로 채워 줄수록 훨씬 안정됩니다.

이 타고난 바탕 위에 현재 대운과 올해 운이 겹치며 지금의 운이 만들어집니다.",
  "sajuEvidence": [
    "기본 바탕은 토 기운이 강해 쉽게 흔들리지 않고 버티는 힘이 좋다는 뜻입니다. 반대로 금 기운은 비기 쉬워 정리와 결단이 필요한 순간에는 한 번 더 망설이기 쉽습니다.",
    "지금 이 고민에서는 버는 힘보다 새는 구멍을 막을 때 재물운이 살아나는 타입.",
    "이번 질문에서는 어디서 돈이 빠져나가는지뿐 아니라, 왜 그 지출을 멈추기 어려운지도 함께 읽어야 합니다.",
    "겉으로 드러난 기운에는 기준을 세우는 힘, 만들어 내는 힘, 책임을 지는 힘이 함께 보입니다. 그래서 밀어붙이기보다 기준을 세우고 쌓아 갈 때 결과가 더 안정적으로 남습니다.",
  ],
  "storyTitle": "User님의 돈이 새는 이유 풀이",
  "subjectArchetypes": {
    "compatibility": undefined,
    "user": {
      "code": "leak_management",
      "description": "버는 힘보다 새는 구멍을 막을 때 재물운이 살아나는 타입",
      "label": "누수관리형",
    },
  },
  "subjectLens": "이 질문에서는 “왜 돈이 안 남지?”보다 “어떤 감정과 관계가 지출 버튼을 누르는지”를 먼저 봐야 합니다. 재물운을 보면 토 구간은 수입을 키우는 감각이 잘 살아나는 편입니다. 금 구간은 지출과 투자 기준을 조금 더 섬세하게 볼수록 좋습니다. 수익을 늘리는 일과 돈을 지키는 일을 함께 가져가면 들어온 복이 더 오래 남습니다. 돈이 새는 이유는 숫자 문제만이 아니라 피로, 관계, 충동이 어떻게 소비로 이어지는지도 함께 봐야 합니다. 현재는 버는 힘보다 새는 구멍을 막을 때 재물운이 살아나는 타입 인맥·감정·충동 때문에 나가는 돈을 먼저 줄이면 재물의 체감이 금방 달라집니다.",
  "summary": "돈이 새는 이유: 돈이 새는 이유는 수입 부족보다 피로와 감정이 어떤 순간 소비 버튼으로 번지는지 읽는 데 있습니다. 지금은 수입 확대보다 새는 장면 한두 개를 먼저 막는 쪽이 훨씬 빨리 반응합니다.",
  "tenYearFlow": "지금 10년 운은 금 기운이 짙어 기준감이 또렷해지는 흐름입니다. 다음 10년은 금 기운이 짙어 기준감이 또렷해지는 흐름 쪽으로 무게가 옮겨갈 가능성이 큽니다.",
  "timingHint": "누수 정리는 지출 후 죄책감이 큰 밤보다, 감정이 덜 올라온 낮 시간에 기준을 세울 때 훨씬 잘됩니다. 누수는 소비 욕구가 커지는 시간대와 상황을 구분하는 순간부터 실제로 잡히기 시작합니다. INFJ 성향인 User님은 큰 흐름을 먼저 보고 움직일 때 리듬이 더 잘 살아납니다. 지출 점검은 감정 소비가 많은 저녁보다 낮 시간에 하는 것이 정확합니다. 재물운은 큰 결정보다 반복되는 지출 습관과 점검 리듬에서 체감이 크게 갈립니다. 현재 큰 운은 신유의 흐름이라 금 기운이 짙어 기준감이 또렷해지는 흐름입니다. 올해는 병오의 흐름이라 화 기운이 짙어 표현력이 또렷해지는 흐름입니다. 월지 축은 양에 놓여 있어, 보호와 보살핌 속에서 힘을 기르는 상태. 그래서 서두르기보다 흐름이 붙는 시간대를 골라 움직일수록 결과가 더 매끈하게 이어집니다.",
  "wealthFlow": "누수 흐름은 금액보다 어떤 상황과 감정에서 지출 버튼이 눌리는지 읽어야 풀립니다. 새는 돈은 금액보다 패턴이 더 중요하므로, 반복 지출이 어떤 상황에서 생기는지를 읽어야 합니다. INFJ 성향인 User님은 돈과 일에서는 예산과 계획을 먼저 세울수록 돈의 흐름을 안정적으로 다루는 힘이 커집니다. 재물운을 보면 버는 힘보다 새는 구멍을 막을 때 재물운이 살아나는 타입. 토 기운이 강하다는 건 돈을 다루는 감각에서 이 장점이 먼저 드러난다는 뜻입니다.

반대로 금 기운이 약한 구간에서는 돈이 새는 이유를 늦게 알아차리기 쉽습니다. 그래서 인맥·감정·충동 때문에 나가는 돈을 먼저 줄이면 재물의 체감이 금방 달라집니다. 새는 돈은 의지보다 상황 패턴을 먼저 바꿀 때 훨씬 빨리 잡힙니다.",
  "yearlyFlow": "2026년 세운은 병오입니다. 병오의 흐름이라 화 기운이 짙어 표현력이 또렷해지는 흐름입니다.",
}
`;

exports[`saju generator regression snapshots > keeps the lover compatibility narrative stable 1`] = `
{
  "actions": [
    "지금 관계를 더 편안하게 만들 생활 기준 1개와 자주 서운한 지점 1개를 나눠 적어 보기",
    "하루 종료 전 “잘한 점 1개 + 내일의 첫 행동 1개”를 적고 잠들기",
    "결정 전 체크리스트 3문항(목적/주의점/다음 행동)으로 판단 속도 높이기",
  ],
  "attractionPoint": "지금도 관계가 이어지는 이유는 서로에게 익숙함과 애정이 동시에 남아 있기 때문입니다. 상대가 내 일상을 알고 있다는 안정감이 이 관계의 큰 장점으로 작동할 수 있습니다.",
  "caution": "MBTI로 보면 User은 배려가 앞서 결정을 미루거나 선을 흐릴 수 있는 점, Partner은 정답을 빨리 찾으려다 마음의 온도를 놓칠 수 있는 점. 좋아한다는 이유로 반복되는 서운함을 다 같은 애정 표현으로 덮으면 관계 피로가 오래 남을 수 있습니다. 현재 연인 궁합은 사랑한다는 확신이 반복되는 서운함을 가볍게 보게 만들기 쉽습니다. 사랑한다는 확신이 클수록 맞춰야 할 기준까지 말없이 넘어가게 될 수 있습니다. 감정이 뜨거울수록 말의 세기도 세질 수 있어, 감정이 오른 날은 결론을 미루는 편이 안전합니다. 좋은 신호 하나에 너무 큰 기대를 싣거나, 나쁜 신호 하나로 관계 전체를 단정하지 않는 태도가 중요합니다.

특히 토 기운이 지나치게 앞서면 판단이 잠깐 급해질 수 있습니다. 속도를 내기 전에 기준을 한 번만 더 확인하면 흔들림이 크게 줄어듭니다. 월지 축은 양에 놓여 있어, 보호와 보살핌 속에서 힘을 기르는 상태. 큰 수정보다 작은 정리 하나만 해도 흐름의 거친 면은 한결 부드러워집니다. 생각이 정리될 때까지 기다리다 타이밍을 놓치지 않도록 작은 행동부터 시작하세요.",
  "communicationTip": "현재 연인 관계에서는 감정 확인을 반복하기보다, 서운했던 장면을 생활 문장으로 바꿔 말하는 편이 더 효과적입니다. “왜 그랬어?”보다 “이럴 때 나는 이렇게 느껴”처럼 짧고 분명한 말이 잘 맞습니다.",
  "conflictTrigger": "좋아하니까 이해해 줄 거라는 기대가 커지면 생활 리듬 차이와 표현 방식 차이가 서운함으로 쌓이기 쉽습니다. 문제의 크기보다 회복을 늦추는 태도가 더 크게 피로를 만들 수 있습니다.",
  "coreSignal": "이번 연인 궁합에서 핵심은 '몰입-정리' 리듬이 실제 관계 기준으로 이어질 수 있는지 읽는 일입니다. 이 리듬은 지금의 애정이 실제 안정감과 회복력으로 이어지는지를 보여 줍니다. 지금은 사랑의 크기보다 서운함 뒤에 다시 편안해질 구조가 있는지부터 읽어야 합니다.

무토와 경금의 애정 흐름은 User의 토 기운과 Partner의 토 기운에서 끌림이 자연스럽게 커지고 금·화 축에서 말의 온도가 어긋나기 쉬운 형태입니다. 토 일간이 금 일간을 생하는 상생 관계라, 한쪽이 흐름을 열면 다른 쪽이 자연스럽게 반응하는 편입니다. 감정의 속도만 잘 맞춰도 이 궁합의 좋은 결이 훨씬 오래 살아납니다.",
  "currentDaewoon": "User: 현재 대운은 33~42세 구간의 신유 대운입니다. 신유의 흐름이라 금 기운이 짙어 기준감이 또렷해지는 흐름입니다. Partner: 현재 대운은 33~42세 구간의 정묘 대운입니다. 정묘의 흐름이라 화의 표현력과 목의 성장력이 함께 움직이는 흐름입니다.",
  "narrativeFlow": "MBTI로 보면 User은 큰 흐름을 먼저 보고 움직일 때 리듬이 더 잘 살아납니다, Partner은 큰 흐름을 먼저 보고 움직일 때 리듬이 더 잘 살아납니다. 이미 관계가 있는 두 사람은 설렘보다 일상에서 마음이 닳는 장면과 다시 회복되는 장면을 갈라서 읽는 편이 더 현실적입니다. 좋아하는 마음보다 중요한 것은 감정의 속도를 맞추는 기술입니다. 이번 궁합은 이미 만나고 있는 두 사람이 왜 편안한지, 혹은 왜 자꾸 같은 곳에서 닳는지를 중심으로 읽습니다. User - Partner는 차이를 지우는 관계가 아니라, 역할을 잘 나눌 때 더 편안하고 단단해지는 관계입니다.

지금은 강하게 끌리고 또 강하게 배우게 되는 타입 서로를 바꾸려 하기보다 각자 잘하는 역할을 인정하면 관계의 매력이 훨씬 커집니다. 잘 맞는 날의 힘을 생활 규칙으로 옮겨 놓으면 뜨거움이 오래 갑니다. 서로의 성향 차이를 억지로 줄이기보다 각자의 리듬을 인정할수록 궁합이 훨씬 부드럽게 이어집니다.",
  "overview": "연인 궁합은 사랑의 크기만이 아니라, 다툰 뒤 다시 편안해지는 속도와 기대치가 얼마나 맞는지를 먼저 봐야 합니다. 두 사람의 궁합은 '흩어진 책장을 한 권씩 다시 꽂아 방이 정돈되는 장면'처럼 호흡이 맞을 때 훨씬 편안하게 이어집니다. 이번 궁합은 이미 만나고 있는 두 사람이 왜 편안한지, 혹은 왜 자꾸 같은 곳에서 닳는지를 중심으로 읽습니다. 무토와 경금의 애정 흐름은 User의 토 기운과 Partner의 토 기운에서 끌림이 자연스럽게 커지고 금·화 축에서 말의 온도가 어긋나기 쉬운 형태입니다. 토 일간이 금 일간을 생하는 상생 관계라, 한쪽이 흐름을 열면 다른 쪽이 자연스럽게 반응하는 편입니다. 감정의 속도만 잘 맞춰도 이 궁합의 좋은 결이 훨씬 오래 살아납니다.

지금 두 사람은 강하게 끌리고 또 강하게 배우게 되는 타입. 강하게 끌리는 만큼 서로에게 배우게 되는 힘도 큰 관계입니다. 서로를 바꾸려 하기보다 각자 강한 부분을 살리고 약한 부분을 보완할 때 관계의 장점이 더 크게 드러납니다.",
  "pairDynamic": "이 관계는 애정이 분명한 대신, 기대하는 가까움과 회복 속도가 다르면 같은 문제를 반복하기 쉬운 타입입니다. 잘 맞을 때는 안정감이 크게 붙지만, 서운함을 오래 미루면 마음의 온도 차이가 금방 커질 수 있습니다.",
  "reflectionQuestion": "이 관계는 사랑이 큰 만큼 더 편안해지고 있나요, 아니면 서운함을 참고만 있나요? 지금의 선택이 긴 흐름과도 맞는지 함께 돌아보면 좋습니다.",
  "relationshipFlow": "MBTI로 보면 관계에서는 User은 공감 뒤에 내가 원하는 기준도 함께 말해야 관계가 더 안정됩니다, Partner은 기준을 말할 때 이유와 마음을 한 문장 더 붙이면 관계의 마찰이 줄어듭니다. 관계 쪽에서는 사랑의 크기보다 표현 빈도와 기대하는 가까움이 얼마나 맞는지가 핵심입니다. 현재 연인 궁합은 사랑의 크기보다 다툰 뒤에도 관계가 다시 안심으로 돌아오는지에서 갈립니다. 관계를 보면 User의 토 기운과 Partner의 토 기운이 만날 때 시너지가 분명합니다. 지금 두 사람은 강하게 끌리고 또 강하게 배우게 되는 타입. 서로를 바꾸려 하기보다 각자 잘하는 역할을 인정하면 관계의 매력이 훨씬 커집니다.

다만 금·화 축에서는 오해가 잠깐 붙기 쉽습니다. 애정을 확인하는 말보다 생활 속 서운함을 짧게 맞추는 대화가 쌓일수록 관계 안정감이 더 커집니다.",
  "sajuBasis": "위 분석표를 먼저 보면 두 사람의 사주 바탕이 한눈에 들어옵니다. User은 무토 일간이고, Partner은 경금 일간입니다.

User은 쉽게 흔들리지 않고 버티는 힘이 좋다는 뜻입니다 Partner은 쉽게 흔들리지 않고 버티는 힘이 좋다는 뜻입니다. 궁합은 이렇게 다른 타고난 결이 지금 들어온 운과 만나며 어떤 분위기를 만드는지 함께 읽어야 정확해집니다.",
  "sajuEvidence": [
    "User은 토 기운이 강해 쉽게 흔들리지 않고 버티는 힘이 좋다는 뜻입니다. Partner는 토 기운이 강해 쉽게 흔들리지 않고 버티는 힘이 좋다는 뜻입니다.",
    "User은 금 축에서 정리와 결단이 필요한 순간에는 한 번 더 망설이기 쉽습니다. Partner는 마음을 바로 드러내거나 분위기를 빠르게 띄우는 일에는 에너지가 더 들 수 있습니다.",
    "이번 질문에서는 지금의 애정이 실제 안심감으로 이어지는지, 아니면 기대 차이로 자주 닳는지를 함께 읽어야 합니다.",
    "User 쪽은 월지 축은 양에 놓여 있어, 보호와 보살핌 속에서 힘을 기르는 상태. Partner 쪽은 월지 해는 병에 놓여 있어, 부담이 쌓이면 쉽게 지치므로 무리하면 손해가 나는 상태. 그래서 두 사람 모두 서두르기보다 각자 편한 리듬을 먼저 맞출수록 관계의 장점이 더 잘 살아납니다.",
  ],
  "storyTitle": "User - Partner의 연인 궁합 풀이",
  "subjectArchetypes": {
    "compatibility": {
      "code": "tension_growth",
      "description": "강하게 끌리고 또 강하게 배우게 되는 타입",
      "label": "긴장성장형",
    },
    "user": undefined,
  },
  "subjectLens": "User와 Partner의 궁합은 감정의 크기보다 표현 속도와 관계 기대치를 어떻게 맞추느냐가 더 중요합니다. 토 기운의 장점은 신뢰와 끌림을 오래 붙드는 데 있고, 금 축은 작은 오해가 길어지기 쉬우니 마음의 온도와 말의 순서를 같이 맞추는 편이 좋습니다. 현재 연인 궁합에서는 더 사랑하는 쪽을 가리기보다, 이 관계가 오래 갈수록 편해지는 구조가 있는지를 먼저 보는 편이 좋습니다. 현재 연인 궁합은 사랑의 크기보다 다툰 뒤에도 관계가 다시 안심되는 구조가 있는지를 보는 편이 정확합니다.",
  "summary": "연인: 이번 궁합은 지금 좋아하고 있다는 사실보다, 그 애정이 실제 안정감과 회복력으로 이어지는지를 읽는 데 초점을 둡니다. 좋아하는 마음만 확인하기보다 다툰 뒤 다시 붙는 속도까지 같이 봐야 합니다.",
  "tenYearFlow": "User: 지금 10년 운은 금 기운이 짙어 기준감이 또렷해지는 흐름입니다. 다음 10년은 금 기운이 짙어 기준감이 또렷해지는 흐름 쪽으로 무게가 옮겨갈 가능성이 큽니다. Partner: 지금 10년 운은 화의 표현력과 목의 성장력이 함께 움직이는 흐름입니다. 다음 10년은 토 기운이 짙어 안정감이 또렷해지는 흐름 쪽으로 무게가 옮겨갈 가능성이 큽니다.",
  "timingHint": "MBTI로 보면 User은 큰 흐름을 먼저 보고 움직일 때 리듬이 더 잘 살아납니다, Partner은 큰 흐름을 먼저 보고 움직일 때 리듬이 더 잘 살아납니다.

연인 궁합은 감정 확인을 몰아치는 날보다, 서운함 뒤에도 짧게 다시 맞출 수 있는 타이밍에서 더 또렷해집니다. 현재 연인 궁합은 감정 확인보다, 서운함 뒤에도 다시 안심되는 대화를 만들 수 있을 때가 더 중요합니다. 갈등 대화는 늦은 밤보다 낮 시간대가 훨씬 부드럽게 풀립니다.

관계 진전은 감정이 가장 뜨거울 때보다 서로의 일상 템포가 맞을 때 훨씬 자연스럽습니다.

지금은 신유의 흐름이라 금 기운이 짙어 기준감이 또렷해지는 흐름입니다. Partner: 현재 대운은 33~42세 구간의 정묘 대운입니다. 정묘의 흐름이라 화의 표현력과 목의 성장력이 함께 움직이는 흐름입니다.

올해는 병오의 흐름이라 화 기운이 짙어 표현력이 또렷해지는 흐름입니다.

급히 결론내기보다 두 사람의 호흡이 맞는 타이밍을 골라 이야기할수록 결과가 훨씬 부드럽습니다. 중요한 이야기는 피곤할 때보다 마음이 조금 느슨해진 시간에 꺼내는 편이 좋습니다.",
  "wealthFlow": "연인 관계도 시간과 돈을 쓰는 방식이 크게 다르면 감정 피로가 빨리 쌓일 수 있습니다. 협업과 돈 흐름은 좋은 의도보다 역할과 기준이 얼마나 또렷한지에서 더 분명하게 드러납니다.

지금 두 사람은 강하게 끌리고 또 강하게 배우게 되는 타입. 서로를 바꾸려 하기보다 각자 잘하는 역할을 인정하면 관계의 매력이 훨씬 커집니다.

User는 앞에서 열고, Partner는 옆에서 살피는 식으로 나누면 변동성을 줄이면서 성과를 오래 가져갈 수 있습니다. 돈과 역할을 감정에서 떼어 기준으로 정리해 둘수록 관계도 함께 편해집니다.",
  "yearlyFlow": "2026년 세운은 병오입니다. 병오의 흐름이라 화 기운이 짙어 표현력이 또렷해지는 흐름입니다.",
}
`;

exports[`saju generator regression snapshots > keeps the self basic narrative stable 1`] = `
{
  "actions": [
    "지금 내 사주에서 가장 믿고 가도 되는 강점 1개를 먼저 적어 보기",
    "오늘 해야 할 일을 3개만 남기고, 가장 작은 1개를 15분 안에 먼저 끝내기",
    "관계 이슈가 있으면 결론보다 기대치 정렬(무엇을, 언제까지)을 먼저 합의하기",
  ],
  "attractionPoint": undefined,
  "caution": "INFJ 성향인 User님은 배려가 앞서 결정을 미루거나 선을 흐릴 수 있는 점. 기본 해석에서는 답을 빨리 고르기보다, 반복해서 힘이 빠지는 생활 패턴을 놓치지 않는 태도가 중요합니다. 전체 흐름을 볼 때일수록 한 가지 해석으로 삶 전체를 단정하기 쉽습니다. 여러 영역을 동시에 잡으려다 체력이 먼저 떨어질 수 있습니다. 시기 해석을 핑계로 결정을 미루기보다, 지금 할 수 있는 작은 조정부터 가져가는 편이 좋습니다.

특히 토 기운이 지나치게 앞서면 판단이 잠깐 급해질 수 있습니다. 좋은 관계를 지키려다 내 기준이 흐려질 수 있어 우선순위를 짧게 메모해 두면 좋습니다. 월지 축은 양에 놓여 있어, 보호와 보살핌 속에서 힘을 기르는 상태. 큰 수정보다 작은 정리 하나만 해도 흐름의 거친 면은 한결 부드러워집니다. 생각이 정리될 때까지 기다리다 타이밍을 놓치지 않도록 작은 행동부터 시작하세요.",
  "communicationTip": undefined,
  "conflictTrigger": undefined,
  "coreSignal": "이번 기본 해석 풀이에서 핵심은 '도전-회복' 결을 어디에 써야 하는지 가르는 일입니다. 이 결은 삶 전체에서 지금 무엇을 살리고 무엇을 다듬어야 하는지 가리키는 중심축입니다. 한 부분보다 전체 리듬을 먼저 읽을수록 해석이 정확해집니다.

토 기운이 강하다는 건 쉽게 흔들리지 않고 버티는 힘이 좋다는 뜻입니다. 금 기운이 약하다는 건 정리와 결단이 필요한 순간에는 한 번 더 망설이기 쉽습니다. 전반 흐름은 토 기운은 선명하고 금 기운은 비기 쉬운 구조로 읽힙니다. 지금은 금 기운이 짙어 기준감이 또렷해지는 흐름이 강하게 들어와, 선명한 기운은 살리고 약한 축은 생활 루틴으로 보완하는 편이 좋습니다.",
  "currentDaewoon": "현재 대운은 33~42세 구간의 신유 대운입니다. 신유의 흐름이라 금 기운이 짙어 기준감이 또렷해지는 흐름입니다. 지금은 새 기회를 넓게 보는 것보다, 내 기본 힘이 어디서 가장 안정적으로 살아나는지 확인하는 시기로 읽는 편이 맞습니다.",
  "narrativeFlow": "INFJ 성향인 User님은 큰 흐름을 먼저 보고 움직일 때 리듬이 더 잘 살아납니다. 기본 해석은 사건 하나를 맞히는 풀이보다, 지금의 내가 왜 이런 리듬으로 흔들리고 버티는지를 길게 설명해 주는 풀이라야 합니다. 판을 한 번에 뒤집기보다, 생활 리듬을 정돈할수록 전체 운이 살아납니다. 이번 풀이는 타고난 사주의 바탕과 지금 가장 크게 작동하는 운을 한 자리에서 읽습니다. 요즘 User님에게 중요한 건 금 기운이 짙어 기준감이 또렷해지는 흐름을 생활 안에서 실제 움직임으로 바꾸는 일입니다.

토 기운이 강하다는 건 쉽게 흔들리지 않고 버티는 힘이 좋다는 뜻입니다. 금 기운이 약하다는 건 정리와 결단이 필요한 순간에는 한 번 더 망설이기 쉽습니다.  큰 결심 한 번보다 작은 완료를 꾸준히 쌓을 때 운이 더 잘 붙습니다.",
  "overview": "INFJ 성향인 User님은 혼자서도 깊이 파고들며 방향을 정리하는 집중력이 먼저 드러나는 편입니다. 한 부분만 떼어 보기보다, 일과 관계와 생활 리듬이 한꺼번에 어디로 기울고 있는지 먼저 읽는 편이 정확합니다. 전체 해석은 특정 고민 하나보다 삶 전체의 리듬을 오래 설명해 주는 축이 무엇인지부터 보는 편이 맞습니다. 사주상 토 기운이 강하게 잡힌 구조라 토 기운이 강하다는 건 쉽게 흔들리지 않고 버티는 힘이 좋다는 뜻입니다. 금 기운이 약하다는 건 정리와 결단이 필요한 순간에는 한 번 더 망설이기 쉽습니다.

이번 풀이는 타고난 사주의 바탕과 지금 가장 크게 작동하는 운을 한 자리에서 읽습니다. 지금은 '도전-회복'이 핵심으로 들어오는 시기입니다. 전반 흐름은 토 기운은 선명하고 금 기운은 비기 쉬운 구조로 읽힙니다. 지금은 금 기운이 짙어 기준감이 또렷해지는 흐름이 강하게 들어와, 선명한 기운은 살리고 약한 축은 생활 루틴으로 보완하는 편이 좋습니다. 서두르지 않아도 결국 방향을 맞추는 힘은 이번 시기에서 분명한 강점으로 살아납니다. ",
  "pairDynamic": undefined,
  "reflectionQuestion": "지금 삶의 균형을 가장 무너뜨리는 요소 1가지는 무엇인가요? 지금의 선택이 긴 흐름과도 맞는지 함께 돌아보면 좋습니다.",
  "relationshipFlow": "INFJ 성향인 User님은 관계에서는 공감 뒤에 내가 원하는 기준도 함께 말해야 관계가 더 안정됩니다. 가까운 사람과의 대화에서는 결론보다 현재 상태 공유를 먼저 시작하세요. 관계 흐름은 감정의 크기보다 말의 순서와 경계의 밀도에서 더 또렷하게 드러납니다. 토 기운이 강하다는 건 마음이 붙은 관계를 오래 끌고 가는 힘이 있다는 뜻입니다. 반대로 금 기운이 약한 구간에서는 서운함을 바로 끊어 말하기보다 속으로 오래 정리하게 되기 쉽습니다.

좋은 관계일수록 기준을 부드럽게 말해 주는 태도가 중요합니다. 짧더라도 자주 상태를 나누는 방식이 관계의 좋은 결을 오래 살립니다.",
  "sajuBasis": "위 분석표를 먼저 보면 User님의 사주 바탕이 한눈에 들어옵니다. 일간은 무토이고, 기본 바탕은 토 기운이 앞서고 금 기운이 비기 쉬운 구조입니다.

토 기운이 강하다는 건 쉽게 흔들리지 않고 버티는 힘이 좋다는 뜻입니다. 금 기운이 약하다는 건 정리와 결단이 필요한 순간에는 한 번 더 망설이기 쉽습니다. 그래서 이 사주는 강한 부분은 믿고 밀어도 좋지만, 비기 쉬운 부분은 생활 습관으로 채워 줄수록 훨씬 안정됩니다.

이 타고난 바탕 위에 현재 대운과 올해 운이 겹치며 지금의 운이 만들어집니다.",
  "sajuEvidence": [
    "기본 바탕은 토 기운이 강해 쉽게 흔들리지 않고 버티는 힘이 좋다는 뜻입니다. 반대로 금 기운은 비기 쉬워 정리와 결단이 필요한 순간에는 한 번 더 망설이기 쉽습니다.",
    "지금은 타고난 기질과 현재 운이 함께 맞물리며 방향을 또렷하게 잡아 주는 시기입니다.",
    "이번 질문에서는 특정 고민 하나보다, 전체 삶의 방향을 오래 설명해 주는 축이 무엇인지부터 읽어야 합니다.",
    "겉으로 드러난 기운에는 기준을 세우는 힘, 만들어 내는 힘, 책임을 지는 힘이 함께 보입니다. 그래서 밀어붙이기보다 기준을 세우고 쌓아 갈 때 결과가 더 안정적으로 남습니다.",
  ],
  "storyTitle": "User님의 기본 해석 풀이",
  "subjectArchetypes": {
    "compatibility": undefined,
    "user": undefined,
  },
  "subjectLens": "전체 해석에서는 강한 기운을 어디에 써야 하는지와 약한 축을 무엇으로 보완해야 하는지를 같이 봐야 합니다. 전반 흐름의 균형 회복 관점에서 핵심은 토 기운을 실행으로 연결하고, 금 축의 흔들림을 루틴으로 보완하는 것입니다. 기본 해석은 한 부분만 깊게 보기보다, 지금의 나를 가장 오래 설명해 주는 결이 무엇인지부터 보는 편이 정확합니다. ",
  "summary": "기본 해석: INFJ 성향인 User님은 혼자서도 깊이 파고들며 방향을 정리하는 집중력을 실제 행동으로 옮길 때 힘이 가장 잘 붙습니다. 이번 풀이는 지금 삶 전체를 흔드는 축이 무엇인지부터 넓게 정리하는 데 초점을 둡니다. '전반 흐름의 균형 회복' 관점에서 '도전-회복' 결이 또렷한 시기입니다. 기본 해석은 한 부분만 깊게 보기보다, 지금의 나를 가장 오래 설명해 주는 결이 무엇인지부터 보는 편이 정확합니다. 무토 일간 위로 금 기운이 짙어 기준감이 또렷해지는 흐름이 겹쳐 들어와, 강점을 실제 행동으로 연결할수록 운이 더 곧게 이어집니다.",
  "tenYearFlow": "지금 10년 운은 금 기운이 짙어 기준감이 또렷해지는 흐름입니다. 다음 10년은 금 기운이 짙어 기준감이 또렷해지는 흐름 쪽으로 무게가 옮겨갈 가능성이 큽니다.",
  "timingHint": "INFJ 성향인 User님은 큰 흐름을 먼저 보고 움직일 때 리듬이 더 잘 살아납니다. 지금은 큰 결론보다 내 삶 전체의 방향을 다시 정리해도 되는 시기인지가 더 중요합니다. 전체 흐름은 큰 결론보다 생활 리듬을 다시 세울 수 있는 구간에서 더 정확하게 읽힙니다. 새로운 시작은 월초보다 컨디션이 올라오는 요일에 맞추는 편이 유리합니다. 같은 운이라도 생활 리듬을 어떻게 쓰느냐에 따라 체감은 크게 달라집니다. 현재 큰 운은 신유의 흐름이라 금 기운이 짙어 기준감이 또렷해지는 흐름입니다. 지금은 새 기회를 넓게 보는 것보다, 내 기본 힘이 어디서 가장 안정적으로 살아나는지 확인하는 시기로 읽는 편이 맞습니다. 올해는 병오의 흐름이라 화 기운이 짙어 표현력이 또렷해지는 흐름입니다. 올해는 전체 방향을 한 번 더 또렷하게 정리할수록, 일과 관계의 선택도 훨씬 덜 흔들립니다. 월지 축은 양에 놓여 있어, 보호와 보살핌 속에서 힘을 기르는 상태. 그래서 서두르기보다 흐름이 붙는 시간대를 골라 움직일수록 결과가 더 매끈하게 이어집니다.",
  "wealthFlow": "INFJ 성향인 User님은 돈과 일에서는 예산과 계획을 먼저 세울수록 돈의 흐름을 안정적으로 다루는 힘이 커집니다. 일과 재물은 같은 뿌리입니다. 일정을 정리하면 지출도 같이 안정됩니다. 일과 돈 흐름은 눈앞의 수치보다 유지 구조와 반복 가능한 리듬에서 더 크게 벌어집니다. 재물운을 보면 버는 힘보다 새는 구멍을 막을 때 재물운이 살아나는 타입. 토 기운이 강하다는 건 돈을 다루는 감각에서 이 장점이 먼저 드러난다는 뜻입니다.

반대로 금 기운이 약한 구간에서는 돈이 새는 이유를 늦게 알아차리기 쉽습니다. 그래서 인맥·감정·충동 때문에 나가는 돈을 먼저 줄이면 재물의 체감이 금방 달라집니다. 작은 기준 하나를 반복 가능한 구조로 만드는 편이 결과를 더 오래 붙잡습니다.",
  "yearlyFlow": "2026년 세운은 병오입니다. 병오의 흐름이라 화 기운이 짙어 표현력이 또렷해지는 흐름입니다. 올해는 전체 방향을 한 번 더 또렷하게 정리할수록, 일과 관계의 선택도 훨씬 덜 흔들립니다.",
}
`;

exports[`saju generator regression snapshots > keeps the self wealth narrative stable 1`] = `
{
  "actions": [
    "이번 달 돈이 들어오는 길 1개와 새는 길 1개를 따로 적어 보기",
    "에너지가 빠지는 일정 1개를 줄이고 회복 시간 30분을 먼저 확보하기",
    "이번 주 소비/시간 로그를 7일만 기록해 반복 패턴을 확인하기",
  ],
  "attractionPoint": undefined,
  "caution": "INFJ 성향인 User님은 배려가 앞서 결정을 미루거나 선을 흐릴 수 있는 점. 돈을 크게 바꾸고 싶은 마음이 앞설수록, 정작 바로 막을 수 있는 작은 누수를 놓치기 쉽습니다. 돈 고민은 숫자보다 감정과 관계가 먼저 지갑을 여는 장면을 놓치기 쉽습니다. 수입을 늘리고 싶은 마음이 커질수록 바로 막을 수 있는 작은 누수를 과소평가하기 쉽습니다. 사람과의 관계를 돈으로 해결하려 들면 정작 내 몫으로 남는 것이 적어지기 쉽습니다. 돈 문제는 불안이 커질수록 감으로 움직이기 쉬우니, 이번 시기에는 숫자 기준을 짧게라도 적어 두는 편이 훨씬 안전합니다.

특히 토 기운이 지나치게 앞서면 판단이 잠깐 급해질 수 있습니다. 마음이 지친 날엔 결정보다 회복을 먼저 챙기면 다음 선택이 훨씬 선명해집니다. 월지 축은 양에 놓여 있어, 보호와 보살핌 속에서 힘을 기르는 상태. 큰 수정보다 작은 정리 하나만 해도 흐름의 거친 면은 한결 부드러워집니다. 생각이 정리될 때까지 기다리다 타이밍을 놓치지 않도록 작은 행동부터 시작하세요.",
  "communicationTip": undefined,
  "conflictTrigger": undefined,
  "coreSignal": "이번 재물운 풀이에서 핵심은 '안정-확장' 결을 어디에 써야 하는지 가르는 일입니다. 이 결은 돈을 더 모으는 문제와 새는 구멍을 막는 문제를 동시에 보여 줍니다. 수입보다 유지 구조를 먼저 점검할수록 흐름이 선명해집니다.

토 기운이 강하다는 건 쉽게 흔들리지 않고 버티는 힘이 좋다는 뜻입니다. 금 기운이 약하다는 건 정리와 결단이 필요한 순간에는 한 번 더 망설이기 쉽습니다. 재물운은 토 쪽에서 벌고 금 쪽에서 새기 쉬운 흐름입니다. 지금은 금 기운이 짙어 기준감이 또렷해지는 흐름이라, 무작정 늘리기보다 돈의 흐름을 정리하고 기준을 세우는 편이 먼저입니다.",
  "currentDaewoon": "현재 대운은 33~42세 구간의 신유 대운입니다. 신유의 흐름이라 금 기운이 짙어 기준감이 또렷해지는 흐름입니다. 지금 몇 해는 큰 승부보다 내 돈 기준을 세우는 시기로 읽는 편이 더 정확합니다.",
  "narrativeFlow": "INFJ 성향인 User님은 큰 흐름을 먼저 보고 움직일 때 리듬이 더 잘 살아납니다. 돈 문제를 숫자 하나로 보지 말고, 들어오는 방식과 남기는 방식이 같은 방향인지 먼저 읽어야 합니다. 큰 행운 한 번보다 새는 구멍을 막는 습관이 돈의 체력을 만들 시기입니다. 이번 풀이는 막연히 돈복이 있느냐보다, 지금 돈이 어디서 붙고 어디서 힘없이 새는지를 분명하게 읽습니다. 요즘 User님에게 중요한 건 금 기운이 짙어 기준감이 또렷해지는 흐름을 생활 안에서 실제 움직임으로 바꾸는 일입니다.

토 기운이 강하다는 건 쉽게 흔들리지 않고 버티는 힘이 좋다는 뜻입니다. 금 기운이 약하다는 건 정리와 결단이 필요한 순간에는 한 번 더 망설이기 쉽습니다. 버는 힘보다 새는 구멍을 막을 때 재물운이 살아나는 타입 인맥·감정·충동 때문에 나가는 돈을 먼저 줄이면 재물의 체감이 금방 달라집니다. 더 벌기 전에 새는 구멍을 줄이면 돈이 머무는 속도가 훨씬 빨라집니다. 큰 결심 한 번보다 작은 완료를 꾸준히 쌓을 때 운이 더 잘 붙습니다.",
  "overview": "INFJ 성향인 User님은 혼자서도 깊이 파고들며 방향을 정리하는 집중력이 먼저 드러나는 편입니다. 재물운 전체 해석은 수입 운, 유지력, 지출 습관, 불안 소비를 한 자리에서 같이 봐야 정확합니다. 재물 질문은 많이 버는 흐름과 오래 남는 구조를 따로 읽을수록 실제 체감과 맞습니다. 사주상 토 기운이 강하게 잡힌 구조라 토 기운이 강하다는 건 쉽게 흔들리지 않고 버티는 힘이 좋다는 뜻입니다. 금 기운이 약하다는 건 정리와 결단이 필요한 순간에는 한 번 더 망설이기 쉽습니다.

이번 풀이는 막연히 돈복이 있느냐보다, 지금 돈이 어디서 붙고 어디서 힘없이 새는지를 분명하게 읽습니다. 지금은 '안정-확장'이 핵심으로 들어오는 시기입니다. 재물운은 토 쪽에서 벌고 금 쪽에서 새기 쉬운 흐름입니다. 지금은 금 기운이 짙어 기준감이 또렷해지는 흐름이라, 무작정 늘리기보다 돈의 흐름을 정리하고 기준을 세우는 편이 먼저입니다. 이번 질문에서는 버는 힘보다 새는 구멍을 막을 때 재물운이 살아나는 타입 작은 변화에서 흐름의 단서를 찾는 감각은 이번 시기에서 분명한 강점으로 살아납니다. 새는 구멍만 줄여도 복이 남는 속도가 눈에 띄게 달라집니다.",
  "pairDynamic": undefined,
  "reflectionQuestion": "돈이 들어오는 길과 남는 길이 지금 같은 방향으로 움직이고 있나요? 지금의 선택이 긴 흐름과도 맞는지 함께 돌아보면 좋습니다.",
  "relationshipFlow": "INFJ 성향인 User님은 관계에서는 공감 뒤에 내가 원하는 기준도 함께 말해야 관계가 더 안정됩니다. 돈 이야기는 감정이 상하기 쉬우니 숫자 기준으로 합의하는 습관이 중요합니다. 관계 흐름은 감정의 크기보다 말의 순서와 경계의 밀도에서 더 또렷하게 드러납니다. 토 기운이 강하다는 건 마음이 붙은 관계를 오래 끌고 가는 힘이 있다는 뜻입니다. 반대로 금 기운이 약한 구간에서는 서운함을 바로 끊어 말하기보다 속으로 오래 정리하게 되기 쉽습니다.

좋은 관계일수록 기준을 부드럽게 말해 주는 태도가 중요합니다. 짧더라도 자주 상태를 나누는 방식이 관계의 좋은 결을 오래 살립니다.",
  "sajuBasis": "위 분석표를 먼저 보면 User님의 사주 바탕이 한눈에 들어옵니다. 일간은 무토이고, 기본 바탕은 토 기운이 앞서고 금 기운이 비기 쉬운 구조입니다.

토 기운이 강하다는 건 쉽게 흔들리지 않고 버티는 힘이 좋다는 뜻입니다. 금 기운이 약하다는 건 정리와 결단이 필요한 순간에는 한 번 더 망설이기 쉽습니다. 그래서 이 사주는 강한 부분은 믿고 밀어도 좋지만, 비기 쉬운 부분은 생활 습관으로 채워 줄수록 훨씬 안정됩니다.

이 타고난 바탕 위에 현재 대운과 올해 운이 겹치며 지금의 운이 만들어집니다.",
  "sajuEvidence": [
    "기본 바탕은 토 기운이 강해 쉽게 흔들리지 않고 버티는 힘이 좋다는 뜻입니다. 반대로 금 기운은 비기 쉬워 정리와 결단이 필요한 순간에는 한 번 더 망설이기 쉽습니다.",
    "지금 이 고민에서는 버는 힘보다 새는 구멍을 막을 때 재물운이 살아나는 타입.",
    "이번 질문에서는 수입 확대만이 아니라, 돈이 오래 남지 못하는 이유를 함께 읽어야 합니다.",
    "겉으로 드러난 기운에는 기준을 세우는 힘, 만들어 내는 힘, 책임을 지는 힘이 함께 보입니다. 그래서 밀어붙이기보다 기준을 세우고 쌓아 갈 때 결과가 더 안정적으로 남습니다.",
  ],
  "storyTitle": "User님의 재물운 풀이",
  "subjectArchetypes": {
    "compatibility": undefined,
    "user": {
      "code": "leak_management",
      "description": "버는 힘보다 새는 구멍을 막을 때 재물운이 살아나는 타입",
      "label": "누수관리형",
    },
  },
  "subjectLens": "전체 재물운에서는 버는 기회와 지키는 기준이 서로 어떻게 어긋나는지를 같이 보는 편이 좋습니다. 재물운을 보면 토 구간은 수입을 키우는 감각이 잘 살아나는 편입니다. 금 구간은 지출과 투자 기준을 조금 더 섬세하게 볼수록 좋습니다. 수익을 늘리는 일과 돈을 지키는 일을 함께 가져가면 들어온 복이 더 오래 남습니다. 재물운은 많이 버는 사람의 흐름과, 남기는 사람이 되는 흐름이 다를 수 있어 둘을 나눠 보는 편이 정확합니다. 현재는 버는 힘보다 새는 구멍을 막을 때 재물운이 살아나는 타입 인맥·감정·충동 때문에 나가는 돈을 먼저 줄이면 재물의 체감이 금방 달라집니다.",
  "summary": "재물운: INFJ 성향인 User님은 혼자서도 깊이 파고들며 방향을 정리하는 집중력을 실제 행동으로 옮길 때 힘이 가장 잘 붙습니다. 이번 풀이는 전체 재물 흐름 안에서 돈이 어디로 붙고 어디로 새는지를 넓게 읽는 데 초점을 둡니다. '재물 흐름의 정리' 관점에서 '안정-확장' 결이 또렷한 시기입니다. 재물운은 많이 버는 사람의 흐름과, 남기는 사람이 되는 흐름이 다를 수 있어 둘을 나눠 보는 편이 정확합니다. 지금 질문에서는 버는 힘보다 새는 구멍을 막을 때 재물운이 살아나는 타입. 무토 일간 위로 금 기운이 짙어 기준감이 또렷해지는 흐름이 겹쳐 들어와, 강점을 실제 행동으로 연결할수록 운이 더 곧게 이어집니다.",
  "tenYearFlow": "지금 10년 운은 금 기운이 짙어 기준감이 또렷해지는 흐름입니다. 다음 10년은 금 기운이 짙어 기준감이 또렷해지는 흐름 쪽으로 무게가 옮겨갈 가능성이 큽니다. 앞으로 10년은 벌이의 크기보다 돈을 다루는 습관이 결과 차이를 더 크게 만들 가능성이 큽니다.",
  "timingHint": "INFJ 성향인 User님은 큰 흐름을 먼저 보고 움직일 때 리듬이 더 잘 살아납니다. 전체 재물운은 큰 결정보다 지출과 판단이 흔들리는 시기를 구분할수록 체감이 커집니다. 돈 질문은 투자 타이밍보다 지출 기준이 흔들리는 시간대를 먼저 구분하는 편이 더 정확합니다. 지출 점검은 감정 소비가 많은 저녁보다 낮 시간에 하는 것이 정확합니다. 재물운은 큰 결정보다 반복되는 지출 습관과 점검 리듬에서 체감이 크게 갈립니다. 현재 큰 운은 신유의 흐름이라 금 기운이 짙어 기준감이 또렷해지는 흐름입니다. 지금 몇 해는 큰 승부보다 내 돈 기준을 세우는 시기로 읽는 편이 더 정확합니다. 올해는 병오의 흐름이라 화 기운이 짙어 표현력이 또렷해지는 흐름입니다. 올해는 수입 확대만 보기보다, 돈이 오래 남는 구조를 만드는 쪽이 더 큰 차이를 만듭니다. 월지 축은 양에 놓여 있어, 보호와 보살핌 속에서 힘을 기르는 상태. 그래서 서두르기보다 흐름이 붙는 시간대를 골라 움직일수록 결과가 더 매끈하게 이어집니다.",
  "wealthFlow": "INFJ 성향인 User님은 돈과 일에서는 예산과 계획을 먼저 세울수록 돈의 흐름을 안정적으로 다루는 힘이 커집니다. 이 질문에서는 한 방보다, 현재 돈을 다루는 구조를 넓게 정리하는 일이 먼저입니다. 재물 흐름은 버는 힘과 남기는 힘을 따로 읽을수록 실제 체감과 맞아집니다. 재물운을 볼 때는 수입보다 돈을 다루는 습관이 먼저 보입니다. 크게 늘리기보다 기준을 세우는 쪽이 먼저 맞을 때가 분명히 있습니다. 재물운을 보면 버는 힘보다 새는 구멍을 막을 때 재물운이 살아나는 타입. 토 기운이 강하다는 건 돈을 다루는 감각에서 이 장점이 먼저 드러난다는 뜻입니다.

반대로 금 기운이 약한 구간에서는 돈이 새는 이유를 늦게 알아차리기 쉽습니다. 그래서 인맥·감정·충동 때문에 나가는 돈을 먼저 줄이면 재물의 체감이 금방 달라집니다. 돈은 한 번의 기회보다 작은 기준을 오래 지킬 때 훨씬 오래 남습니다.",
  "yearlyFlow": "2026년 세운은 병오입니다. 병오의 흐름이라 화 기운이 짙어 표현력이 또렷해지는 흐름입니다. 올해는 수입 확대만 보기보다, 돈이 오래 남는 구조를 만드는 쪽이 더 큰 차이를 만듭니다.",
}
`;
